--- a/_posts/2022-01-09-0103-0109.md
+++ b/_posts/2022-01-09-0103-0109.md
@@ -197,3 +197,67 @@ jobs:
       - name: Say Hello
         run: echo "hello, world!"
 ```
+
+## 0106
+
+# 다양한 로그인 방식
+
+## JWT
+
+### JWT란?
+
+JSON 객체를 사용해서 토큰 자체에 정보들을 저장하고 있는 웹 토큰
+
+토큰의 유효성 검증을 위한 문자열인 Signature, 그리고 정보를 해싱하기 위한 알고리즘 정보인 Header, 서버와 클라이언트가 주고받는 실제로 사용될 정보인 Payload로 구성
+
+### JWT 인증방식
+
+1. 먼저 브라우저에서 Login요청을 한다.
+2. 서버에서는 계정정보를 읽어 사용자를 확인한 후, 사용자의 고유한 ID값을 부여한 후, 기타 정보와 함께 Payload에 넣는다.
+3. JWT 토큰의 유효기간을 설정한다.
+4. 암호화할 secret key를 이용해 ACCESS TOKEN을 발급한다.
+5. 사용자는 토큰을 받아 저장한 후, 인증이 필요한 요청마다 토큰을 헤더에 실어 보낸다.
+6. 서버에서는 해당 토큰의 verify signature를 secret key로 복호화한 후, 조작 여부, 유효기간을 확인한다.
+7. 검증이 완료된다면, Payload를 디코딩하여 사용자의 ID에 맞는 데이터를 가져온다.
+
+### 장점
+
+세션/쿠키 방식은 별도의 저장소의 관리가 필요하다. 그러나 JWT는 발급한 후 검증만 하면 되기 때문에 추가 저장소가 필요 없어서 stateless 한 서버를 만들수 있다.  
+토큰 기반으로 하는 다른 인증시스템에 접근이 가능하다. 예를들어 Google 로그인 등은 모두 토큰을 기반으로 인증한다.
+
+### 단점
+
+Payload의 정보가 많아지면 네트워크 사용량 증가.  
+토큰이 클라이언트에 저장되어 토큰을 탈취 당하면 서버에서 대처하기가 어렵다.
+
+### 단점 해결 방법
+
+1. 짧은 만료 기간 설정
+   토큰의 만료기간을 짧게 설정하면 토큰이 탈취되더라도 빠르게 만료되기 때문에 피해를 최소화 할 수 있다. 그러나 사용자가 자주 로그인해야 하는 불편함이 수반된다.
+2. Refresh Token
+   짧은 만료기간을 가지는 Access Token 및 그보다 긴 만료 기간을 가진 Refresh Token을 발급하는 전략이다.  
+   클라이언트는 Access Token이 만료되었을 때 Refresh Token을 사용하여 Access Token의 재발급을 요청한다.  
+   서버는 DB에 저장된 Refresh Token과 비교하여 유효한 경우 토큰을 재발급하고, 만료된 경우 사용자에게 로그인을 요청한다.  
+   이 전략을 사용하면 Access Token의 만료 기한을 짧게 설정할 수 있고, 서버가 Refresh Token을 강제로 만료시킬 수 있다.  
+   하지만 별도의 저장소에 저장해야 하기 때문에 JWT의 장점을 완벽하게 누릴 수 없다.
+
+## 쿠키 / 세션 방식
+
+http는 비연결성과 stateless하다는 특징을 가지고 있기에 요청에 대한 응답을 처리하게 되면 연결을 끊어 버린다.  
+그래서 로그인을 하더라도 다음 요청에서는 해당 클라이언트를 기억하지 못한다는 문제가 존재한다.  
+쿠키와 세션은 이를 보완하기 위한 기술로 가장 전통적인 로그인 방식이다.
+
+세션은 클라이언트의 인증정보를 서버 측에 저장하고 관리한다.  
+로그인이 정상적으로 성공한다면 인증 정보는 서버에 관리하고 클라이언트 식별자인 JSESSIONID를 쿠키에 담는다.  
+이후 클라이언트는 JSESSIONID 쿠키를 요청을 보낼 때마다 함께 보내 클라이언트를 식별한다.
+
+이 방식의 단점으로는 해커가 JSESSIONID를 탈취하여 클라이언트인 척 위장할 수 있다는 한계가 존재하고,  
+서버에서는 세션 저장소를 사용하므로 요청이 많아지면 서버에 부하가 심해진다.
+
+## OAuth
+
+이는 카카오 로그인, 구글 로그인과 같이 외부 서비스에서 인증을 가능하게 하고, 그 서비스의 API를 이용하게 해주는 것을 OAuth라고 한다.
+
+예를 들어 사용자가 서비스 접근 및 로그인 요청을 하게 되면, 서비스에서 또 다른 외부 서비스로 로그인 요청을 하게 된다.  
+그러면 외부 서비스에서 로그인 페이지를 제공하고, 인증 성공 시 서비스는 Access Token을 발급받게 된다.  
+이를 통해 로그인이 성공하게 되면 이후 서비스를 사용할 수 있고, 별도의 회원가입을 하지 않아도 Oauth를 제공하는 외부 서비스에만 가입되어 있다면 편하게 인증할 수 있다는 장점을 가지고 있다.
