--- a/_posts/2022-01-17-0117-0123.md
+++ b/_posts/2022-01-17-0117-0123.md
@@ -223,3 +223,45 @@ useEffect(() => {
 
 타입스크립트는 어느 부서에 들어가든 두루두루 사용된다는 생각이 들어 미리 학습해야겠다고 생각했다.  
 현재에 안주하지말고 남은 기간 최선을 다해 후회없는 시간을 보내자
+
+<br />
+<br />
+<br />
+
+## 0120
+
+## 이벤트 핸들러 내부의 this
+* 유사한 여러 개의 요소가 있고, 모두 같은 이벤트 핸들러가 등록되었을 때 그 이벤트 핸들러는 이벤트가 일어난 요소를 참조하는 것이 편할 것이다.
+* 따라서 이벤트 핸들러 내부의 this는 이벤트 객체의 currentTarget 프로퍼티와 같다.
+* 그러므로 이벤트 핸들러 프로퍼티 방식과 addEventListener 메서드 방식 모두 이벤트 핸들러 내부의 this는 이벤트를 바인딩한 DOM 요소를 가리킨다.
+
+```html
+<body>
+  <button type="button" id="button">click me</button>
+  <script>
+    const $button = document.getElementById('button');
+
+    $button.addEventListener('click', function () {
+      console.log(this);  // $button 요소를 가리킨다.
+    })
+  </script>
+</body>
+```
+* 다만 이벤트 핸들러를 화살표 함수로 등록하게 된다면 이는 렉시컬 this를 가리키므로 this는 전역 객체인 window를 가리키게 된다.
+
+
+
+## drop & drop 구현 시, 이벤트 핸들러에서 preventDefault를 호출해야 하는 이유
+* 웹 페이지나 애플리케이션의 대부분의 구역들은 데이터를 드롭하기에 유효하지 않다.
+* drop 이벤트를 사용하기 위해서는 dragenter와 dragover의 이벤트에서 preventDefault 메서드를 호출하여 drop을 허용하지 않는 기본 동작을 방지해야 한다.
+* 또한 링크를 드래그 드롭한 경우 링크가 열리는데, 이를 방지하기 위해서는 drop 이벤트 핸들러에서 preventDefault를 호출해줘야 한다.
+
+
+
+## dragenter 이벤트와 dragover 이벤트 차이
+* dragenter 이벤트는 마우스가 대상 객체의 위로 처음 진입할 때 발생  
+* dragover 이벤트는 드래그하면서 마우스가 대상 객체 위에 자리 잡고 있을 때 주기적으로 발생
+
+기존에 구현했을 때는 dragenter 사용 시, 드롭 이벤트가 정상적으로 호출되지 않아서 dragover 이벤트를 사용하여 코드를 작성하였다.  
+하지만 dragenter로 다시 이벤트 핸들러를 작성하고, dragover 이벤트 핸들러에서는 preventDefault 메서드를 호출하니 drop 이벤트가 잘 동작하는 것을 확인하였다.  
+즉, 불필요하게 이벤트핸들러가 자주 호출되었던 것을 이벤트의 타입을 바꿈으로써 성능을 향상시킬 수 있음을 발견했다.
