--- a/_posts/2022-01-17-0117-0123.md
+++ b/_posts/2022-01-17-0117-0123.md
@@ -231,37 +231,56 @@ useEffect(() => {
 ## 0120
 
 ## 이벤트 핸들러 내부의 this
-* 유사한 여러 개의 요소가 있고, 모두 같은 이벤트 핸들러가 등록되었을 때 그 이벤트 핸들러는 이벤트가 일어난 요소를 참조하는 것이 편할 것이다.
-* 따라서 이벤트 핸들러 내부의 this는 이벤트 객체의 currentTarget 프로퍼티와 같다.
-* 그러므로 이벤트 핸들러 프로퍼티 방식과 addEventListener 메서드 방식 모두 이벤트 핸들러 내부의 this는 이벤트를 바인딩한 DOM 요소를 가리킨다.
+
+- 유사한 여러 개의 요소가 있고, 모두 같은 이벤트 핸들러가 등록되었을 때 그 이벤트 핸들러는 이벤트가 일어난 요소를 참조하는 것이 편할 것이다.
+- 따라서 이벤트 핸들러 내부의 this는 이벤트 객체의 currentTarget 프로퍼티와 같다.
+- 그러므로 이벤트 핸들러 프로퍼티 방식과 addEventListener 메서드 방식 모두 이벤트 핸들러 내부의 this는 이벤트를 바인딩한 DOM 요소를 가리킨다.
 
 ```html
 <body>
   <button type="button" id="button">click me</button>
   <script>
-    const $button = document.getElementById('button');
+    const $button = document.getElementById("button");
 
-    $button.addEventListener('click', function () {
-      console.log(this);  // $button 요소를 가리킨다.
-    })
+    $button.addEventListener("click", function () {
+      console.log(this); // $button 요소를 가리킨다.
+    });
   </script>
 </body>
 ```
-* 다만 이벤트 핸들러를 화살표 함수로 등록하게 된다면 이는 렉시컬 this를 가리키므로 this는 전역 객체인 window를 가리키게 된다.
 
-
+- 다만 이벤트 핸들러를 화살표 함수로 등록하게 된다면 이는 렉시컬 this를 가리키므로 this는 전역 객체인 window를 가리키게 된다.
 
 ## drop & drop 구현 시, 이벤트 핸들러에서 preventDefault를 호출해야 하는 이유
-* 웹 페이지나 애플리케이션의 대부분의 구역들은 데이터를 드롭하기에 유효하지 않다.
-* drop 이벤트를 사용하기 위해서는 dragenter와 dragover의 이벤트에서 preventDefault 메서드를 호출하여 drop을 허용하지 않는 기본 동작을 방지해야 한다.
-* 또한 링크를 드래그 드롭한 경우 링크가 열리는데, 이를 방지하기 위해서는 drop 이벤트 핸들러에서 preventDefault를 호출해줘야 한다.
 
-
+- 웹 페이지나 애플리케이션의 대부분의 구역들은 데이터를 드롭하기에 유효하지 않다.
+- drop 이벤트를 사용하기 위해서는 dragenter와 dragover의 이벤트에서 preventDefault 메서드를 호출하여 drop을 허용하지 않는 기본 동작을 방지해야 한다.
+- 또한 링크를 드래그 드롭한 경우 링크가 열리는데, 이를 방지하기 위해서는 drop 이벤트 핸들러에서 preventDefault를 호출해줘야 한다.
 
 ## dragenter 이벤트와 dragover 이벤트 차이
-* dragenter 이벤트는 마우스가 대상 객체의 위로 처음 진입할 때 발생  
-* dragover 이벤트는 드래그하면서 마우스가 대상 객체 위에 자리 잡고 있을 때 주기적으로 발생
+
+- dragenter 이벤트는 마우스가 대상 객체의 위로 처음 진입할 때 발생
+- dragover 이벤트는 드래그하면서 마우스가 대상 객체 위에 자리 잡고 있을 때 주기적으로 발생
 
 기존에 구현했을 때는 dragenter 사용 시, 드롭 이벤트가 정상적으로 호출되지 않아서 dragover 이벤트를 사용하여 코드를 작성하였다.  
 하지만 dragenter로 다시 이벤트 핸들러를 작성하고, dragover 이벤트 핸들러에서는 preventDefault 메서드를 호출하니 drop 이벤트가 잘 동작하는 것을 확인하였다.  
 즉, 불필요하게 이벤트핸들러가 자주 호출되었던 것을 이벤트의 타입을 바꿈으로써 성능을 향상시킬 수 있음을 발견했다.
+
+<br />
+<br />
+<br />
+
+## 0121
+
+## 이슈 수정, 삭제 시 모든 리스트가 재렌더링 되는데 이를 막을 방법
+
+innerHTML 프로퍼티에 HTML 마크업 문자열을 할당하면 기존의 자식 노드까지 모두 제거하고 다시 처음부터 새롭게 자식 노드를 생성하여 DOM에 반영한다. 이는 효율적이지 않다.
+
+insertAdjacentHTML 메서드는 기존 요소를 제거하지 않으면서 위치를 지정해 새로운 요소를 삽입한다.  
+화면에 렌더링할 때 innerHTML로 모든 요소를 다시 그리는 것이 아니라 이러한 적절한 메서드를 사용하여 렌더링한다면 좀 더 효율적으로 렌더링 할 수 있을 것 같다.
+
+## DOM 엘리먼트 삭제 시, 이벤트리스너도 같이 삭제될까?
+
+삭제한 DOM 요소를 참조하는 대상이 모두 사라진다면, 가비지 컬렉터에 의해 DOM 요소와 더불어 이벤트 리스너도 같이 삭제될 것이다.
+
+kanban 보드를 구현하면서는 각 이슈가 아닌 이슈 리스트에 이벤트 리스너를 바인딩 했기에 이벤트 리스너를 해제해야할 이유가 없지만, 만약 각 이슈에 이벤트 리스너를 바인딩 했고, DOM 요소를 참조하는 대상이 남아있다면 메모리 누수가 발생하기에 이벤트리스너를 삭제해줘야 한다.
