--- a/_posts/2022-01-25-0124-0130.md
+++ b/_posts/2022-01-25-0124-0130.md
@@ -8,15 +8,16 @@ excerpt: ""
 ## 0124
 
 # 타입스크립트란?
+
 자바스크립트에 타입을 부여한 언어
 자바스크립트의 확장된 언어로 실행하려면 컴파일 과정을 거쳐야 한다.
 
-
 ## 타입스크립트 장점
+
 에러를 사전에 방지하여 코드의 품질을 높이고, 코드 자동 완성 기능을 최대로 활용하고 가이드 역할을 통해 개발 생산성을 높일 수 있다.
 
-
 ### 자바스크립트를 타입스크립트처럼 코딩하는 방법
+
 ```javascript
 // @ts-check
 
@@ -28,13 +29,173 @@ function sum(a, b) {
   return a + b;
 }
 ```
-* JSDoc의 기능과 `@ts-check` 주석을 활용하여 자바스크립트를 타입스크립트처럼 코딩할 수 있다.
-* 다만 이렇게 하면 코드의 양이 많아지고 불편하다는 단점이 있다.
 
+- JSDoc의 기능과 `@ts-check` 주석을 활용하여 자바스크립트를 타입스크립트처럼 코딩할 수 있다.
+- 다만 이렇게 하면 코드의 양이 많아지고 불편하다는 단점이 있다.
 
 ## 타입스크립트 설치와 사용
-* `npm i typescript -g`  
-	* 타입스크립트를 전역 설치한다.  
-* 타입스크립트로 작성된 코드는 브라우저가 해석할 수 없기 때문에 JS 파일로 컴파일 해줘야 한다.
-* `tsc 변환할파일`  
-	* ts 확장자를 가진 파일을 js 파일로 컴파일한다.
+
+- `npm i typescript -g`
+  - 타입스크립트를 전역 설치한다.
+- 타입스크립트로 작성된 코드는 브라우저가 해석할 수 없기 때문에 JS 파일로 컴파일 해줘야 한다.
+- `tsc 변환할파일`
+  - ts 확장자를 가진 파일을 js 파일로 컴파일한다.
+
+<br />
+<br />
+<br />
+
+## 0129
+
+# 최신 브라우저 내부
+
+## CPU, GPU, 메모리 그리고 다중 프로세스 아키텍처
+
+### CPU
+
+CPU는 컴퓨터의 두뇌라 할 수 있다. CPU 코어는 여러 종류의 작업을 하나씩 순서대로 처리할 수 있다.
+
+### GPU
+
+- CPU와 달리 GPU는 간단한 작업에만 특화되어 있지만 여러 GPU 코어가 동시에 작업을 수행할 수 있다.
+- GPU는 그래픽 작업을 처리하기 위해 개발되었고, 빠른 렌더링과 매끄러운 상호작용에 도움을 준다.
+- 최근 몇 년 동안 GPU 가속을 통해 GPU가 단독으로 처리할 수 있는 계산이 점점 더 많아졌다.
+
+> 특정 작업을 CPU가 아닌 다른 특별한 장치를 통해 수행 속도를 높이는 것을 하드웨어 가속이라 한다.  
+> 그래픽이나 사운드와 관련된 작업에 하드웨어 가속을 많이 사용한다.
+> 브라우저에서 하드웨어 가속은 주로 GPU를 사용한 그래픽 작업의 가속을 의미한다.
+
+## 프로세스와 스레드로 프로그램 실행
+
+- 브라우저 아키텍처를 살펴보기 전에 파악해야 할 또 다른 개념은 프로세스와 스레드이다.
+- 애플리케이션을 시작하면 프로세스가 하나 만들어진다. 프로세스가 작업을 하기 위해 스레드를 생성할 수도 있지만 선택 사항이다.
+- 운영체제는 프로세스가 작업할 메모리를 한 조각 주는데, 이 전용 메모리 공간에 애플리케이션의 모든 상태가 저장된다.
+- 애플리케이션을 닫으면 프로세스가 사라지고 운영체제가 메모리를 비운다.
+- 프로세스는 여러 작업을 수행하기 위해 운영체제에 다른 프로세스를 실행하라고 요청할 수 있다. 그러면 메모리의 다른 부분이 새 프로그램에 할당된다.
+  - 두 프로세스가 서로 정보를 공유해야 할 때는 IPC를 사용한다.
+  - 그래서 작업 프로세스가 응답하지 않을 때 애플리케이션의 다른 부분을 실행하는 프로세스를 중지하지 않고도 응답하지 않는 프로세스를 다시 시작할 수 있다.
+
+## 브라우저 아키텍처
+
+- 브라우저를 만드는 방법에 대한 표준은 없기 때문에 이를 멀티 프로세스로 구현할 지, 멀티 스레드로 구현할 지는 선택사항이다.
+- 다만 크롬 브라우저의 경우 브라우저 프로세스가 애플리케이션의 각 부분을 맡고 있는 다른 프로세스를 조정하는 방식으로 구현되어 있다.
+- 렌더러 프로세스는 여러 개가 만들어져 각 탭마다 할당된다.
+- 최근까지 크롬은 탭마다 프로세스를 할당했다. 이제는 사이트마다 프로세스를 할당한다.
+
+### 브라우저 프로세스
+
+주소 표시줄, 북마크 막대, 뒤로 가기 버튼, 앞으로 가기 버튼 등 애플리케이션의 크롬 부분을 제어한다.  
+네트워크 요청이나 파일 접근과 같이 눈에 보이지는 않지만 권한이 필요한 부분도 처리한다.
+
+### 렌더러 프로세스
+
+탭 안에서 웹 사이트가 표시되는 부분의 모든 것을 제어한다.
+
+### 플러그인 프로세스
+
+웹 사이트에서 사용하는 플러그인을 제어한다.
+
+### GPU 프로세스
+
+GPU 작업을 다른 프로세스와 격리해서 처리한다. GPU는 여러 애플리케이션의 요청을 처리하고 같은 화면에 요청받은 내용을 그리기 때문에 GPU 프로세스는 별도 프로세스로 분리되어 있다.
+
+## 다중 프로세스 아키텍처라 크롬에 주는 이점
+
+- 예를 들어, 렌더러 프로세스를 하나 사용하는 경우 여러 탭 중 하나의 탭만 응답하지 않아도 모든 탭이 응답하지 못하게 된다.
+- 반면, 각 탭이 독립적인 렌더러 프로세스에 의해 실행되는 경우 한 탭이 응답히자 않으면 그 탭만 닫고 실행 중인 다른 탭으로 이동할 수 있다.
+- 같은 원리로 브라우저 프로세스와 렌더러 프로세스를 분리하여 렌더러 프로세스가 웹 페이지를 그리는 도중 오류가 발생해 실행이 중단되더라도 브라우저 전체가 종료되지 않고 오류 페이지를 보여 주는 정도로 문제를 해결할 수 있다.
+
+### 보안과 격리
+
+- 운영체제를 통해 프로세스의 권한을 제한할 수 있어 브라우저는 특정 프로세스가 특정 기능을 사용할 수 없게 제한할 수 있다.
+  - 예를 들어 크롬은 렌더러 프로세스처럼 임의의 사용자 입력을 처리하는 프로세스가 임의의 파일에 접근하지 못하게 제한한다.
+
+### 더 많은 메모리 절약 - 크롬의 서비스화
+
+크롬은 브라우저의 각 부분을 서비스로 실행해 여러 프로세스로 쉽게 분리하거나 하나의 프로세스로 통합할 수 있도록 아키텍처를 변경하고 있다.
+
+- 성능이 좋은 하드웨어에서 크롬이 실행 중일 때에는 각 서비스를 여러 프로세스로 분할해 안정성을 높이고, 리소스가 제한적인 장치에서 실행 중일 때에는 서비스를 하나의 프로세스에서 실행하여 메모리 사용량을 줄이는 것이 기본 아이디어이다.
+
+### 프레임별로 실행되는 렌더러 프로세스 - 사이트 격리
+
+- 사이트 격리는 iframe의 사이트를 별도의 렌더러 프로세스에서 실행하는 것이다.
+- 탭마다 렌더러 프로세스를 할당하는 모델에서는 iframe의 사이트가 같은 렌더러 프로세스에서 작동하기 때문에 서로 다른 사이트 간에 메모리가 공유될 수 있다는 문제점이 있었다.
+- 동일 출저 정책(sop)은 웹 보안 모델의 핵심으로 한 사이트는 동의 없이 다른 사이트의 데이터에 접근할 수 없어야 한다. 이때 프로세스를 격리하는 것이 사이트를 격리하는 가장 효과적인 방법이다.
+
+## 내비게이션 과정
+
+내비게이션이란 브라우저 주소 표시줄에 URL을 입력하면 브라우저가 인터넷에서 데이터를 가져와서 페이지 렌더링을 준비하는 과정을 의미한다.
+
+- 브라우저 프로세스는 탭 영역 밖에 있는 모든 부분을 제어한다. 브라우저 프로세스에는 UI 스레드와 네트워크 스레드, 스토리지 스레드 등이 있다
+- UI 스레드는 브라우저의 버튼과 입력란을 그린다.
+- 네트워크 스레드는 인터넷에서 데이터를 가져오기 위해 네트워크 스택을 다룬다.
+- 스토리지 스레드는 파일에 대한 접근을 제어한다.
+- 주소 표시줄에 URL을 입력하면 브라우저 프로세스의 UI 스레드가 입력을 처리한다.
+
+### 1단계: 입력 처리
+
+- 사용자가 주소 표시줄에 타이핑을 시작하면 UI 스레드는 먼저 '입력되는 내용이 검색어인지 URL인지' 확인한다.
+- UI 스레드는 입력되는 내용을 파싱하여 검색 엔진으로 이동할지 요청한 사이트로 이동할지 결정해야 한다.
+- 사용자가 입력한 문자열이 검색어라면 문자열을 사용자가 선택한 검색 엔진의 URL과 조합해 새로운 URL 형태로 변환한다.
+
+### 2단계: 내비게이션 시작
+
+- 사용자가 Enter 키를 누르면 사이트의 콘텐츠를 가져오기 위해 UI 스레드가 네트워크 호출을 시작한다.
+- 로딩 스피너가 탭의 모서리에 표시되고, 네트워크 스레드는 요청을 처리한다.
+- 네트워크 스레드가 301과 같은 리디렉션 헤더를 수신할 경우 네트워크 스레드가 UI 스레드와 통신해 서버가 리디렉션을 요청했다는 것을 알린다. 그런 다음 새로운 URL 요청이 시작된다.
+
+### 3단계: 응답 읽기
+
+- 응답 본문인 페이로드가 들어오기 시작하면 네트워크 스레드는 스트림의 처음 몇 바이트를 확인한다.
+- 페이로드가 어떤 형식의 데이터인지는 응답 헤더의 Content-Type 헤더가 알려 주지만 정보가 없거나 잘못된 정보가 있을 수 있다.
+  - 이때 MIME 스니핑을 실행해 데이터의 실제 형식을 알아낸다.
+- 응답이 HTML 파일이라면 데이터를 렌더러 프로세스에 전달하는 단계로 넘어간다.
+- 이 단계는 또한 Safe Browsing의 검사가 실행되는 단계이다. 도메인과 응답 데이터가 악성사이트로 알려진 사이트와 일치하는 것 같다면 네트워크 스레드는 경고 페이지를 표시하라고 알린다.
+
+### 3단계: 렌더러 프로세스 찾기
+
+- 모든 검사가 끝나고 브라우저가 요청된 사이트로 이동해야 한다고 네트워크 스레드가 확신하게 되면 네트워크 스레드는 UI 스레드에 데이터가 준비되었음을 알린다.
+- UI 스레드는 웹 페이지의 렌더링을 수행할 렌더러 프로세스를 찾는다.
+- 네트워크 요청이 응답을 받기까지 수백 밀리초가 걸릴 수 있기 때문에 이 과정을 더 빨리 진행하기 위한 최적화가 적용되어 있다.
+- 2단계에서 UI 스레드가 네트워크 스레드로 URL 요청을 보낼 때 UI 스레드는 이미 어느 사이트로 이동할 지 알고 있기에 네트워크 요청과 동시에 렌더러 프로세스를 시작한다.
+- 모든 것이 예상대로 잘 진행된다면 네트워크 스레드가 데이터를 받을 때 렌더러 프로세스는 준비 상태에 있게 된다.
+
+### 4단계: 내비게이션 실행
+
+- 데이터와 렌더러 프로세스가 준비되었으므로 내비게이션을 실행하도록 브라우저 프로세스에서 렌더러 프로세스로 IPC 메시지를 전송한다.
+- 그리고 렌더러 프로세스가 HTML 데이터를 계속 수신할 수 있도록 브라우저 프로세스는 데이터 스트림을 전달한다.
+- 렌더러 프로세스에서 내비게이션이 실행되었다는 것을 브라우저 프로세스가 확인하고 나면 내비게이션이 완료되고 문서 로딩 단계가 시작된다.
+- 이 시점에 주소 표시줄이 업데이트 되고 보안 표시와 사이트 설정 UI도 새 페이지의 사이트 정보를 반영해 갱신된다.
+- 탭에 대한 세션 기록이 업데이트되어 뒤로 가기 버튼과 앞으로 가기 버튼도 방금 이동한 사이트를 반영해 작동한다.
+- 탭이나 창을 닫은 이후 탭과 세션을 복원할 수 있게 세션 기록이 디스크 드라이브에 저장된다.
+
+### 추가 단계: 초기 로드 완료
+
+- 내비게이션이 실행되면 렌더러 프로세스는 계속 리소스를 로딩하고 페이지를 렌더링한다.
+- 렌더러 프로세스가 렌더링을 끝내면 브라우저 프로세스로 IPC 메시지를 보낸다.
+- 그러면 UI 스레드는 탭에서 로딩 스피너의 작동을 중지한다.
+
+### 다른 사이트로 내비게이션
+
+- 내비게이션이 완료된 후, 다른 URL을 다시 입력하게 되면 브라우저 프로세스는 동일한 단계를 거쳐 다른 사이트로 이동을 처리한다.
+- 하지만 그전에 렌더링된 사이트에서 beforeunload 이벤트를 확인해야 한다.
+- 이 이벤트는 내비게이션 시간이 늘어날 수 있기에 페이지에 입력한 데이터가 손실될 수 있음을 경고하는 등 필요한 경우에만 추가해야 한다.
+
+### 서비스 워커
+
+최근 서비스 워커가 도입되며 내비게이션 과정에도 변화가 생겼다.
+
+- 서비스 워커는 애플리케이션의 코드에 네트워크 프록시를 작성할 수 있는 수단이다.
+- 서비스 워커를 통해 웹 개발자는 무엇을 로컬 캐시에 저장할지, 언제 네트워크에서 새 데이터를 가져올지 제어할 수 있다.
+- 서비스 워커가 캐시에서 페이지를 로드하도록 설정되었다면 네트워크에서 데이터를 가져오도록 요청할 필요가 없다.
+- 중요한 점은 서비스 워커가 렌더러 프로세스에서 실행되는 JS 코드라는 점이다. 그렇다면 내비게이션 요청이 들어왔을 때 브라우저 프로세스는 사이트에 서비스 워커가 있다는 것을 어떻게 알 수 있을까?
+  - 서비스 워커가 등록되면 서비스 워커의 범위는 참조로 유지된다.
+  - 내비게이션이 발생하면 네트워크 스레드는 도메인을 등록된 서비스 워커의 범위와 비교한다.
+  - 해당 URL에 등록된 서비스 워커가 있으면 UI 스레드는 서비스 워커 코드를 실행하기 위해 렌더러 프로세스를 찾는다.
+  - 서비스 워커는 네트워크에 데이터를 요청하지 않고 캐시에서 데이터를 가져올 수 있다.
+
+### 내비게이션 프리로드
+
+- 브라우저 프로세스와 렌더러 프로세스 사이를 왕복해야 하는 상황에서 서비스 워커가 결국 네트워크에서 데이터를 요청하기로 하면 지연이 발생하게 됨을 알 수 있다.
+- 내비게이션 프리로드는 서비스 워커의 시작과 병렬로 리소스를 로딩해 내비게이션 과정의 속도를 높이는 메커니즘이다.
+- 이 요청은 헤더에 표시되어 서버가 이러한 요청에 대해 다른 콘텐츠를 보낼 수 있게 한다.
