--- a/_posts/2022-01-25-0124-0130.md
+++ b/_posts/2022-01-25-0124-0130.md
@@ -41,6 +41,139 @@ function sum(a, b) {
 - `tsc 변환할파일`
   - ts 확장자를 가진 파일을 js 파일로 컴파일한다.
 
+### 타입스크립트 설정 파일
+
+tsconfig.json 파일을 생성하고 키 값 형태로 작성한다.
+
+```json
+{
+  "compilerOptions": {
+    "allowJs": true,
+    "checkJs": true,
+    "noImplicitAny": true
+  },
+  "include": ["./src/**/*"]
+}
+```
+
+- compilerOptions는 컴파일 할 때의 옵션을 설정한다.
+- allowJs는 프로젝트 내에 자바스크립트를 허용하겠다는 의미
+- checkJs는 `@ts-check`의 기능과 동일하다.
+- noImplicitAny는 모든 타입에 대해서 최소 Any라고 하는 기본적인 타입이라도 작성해야한다는 의미
+
+### 타입스크립트 플레이그라운드
+
+[타입스크립트 플레이그라운드](https://www.typescriptlang.org/play?#code/MYGwhgzhAEDKAuBXAJgUwHb2gbwFDQOnTAFtUAuaCeAJwEt0BzAbl30OAHt1qbFh4nGgApiZSrwaMAlDnaFC8ABZ0IAOjGpoAXiKlUrBQF82ClcNl4FC+dBNGgA)
+
+위의 사이트에서 타입스크립트로 작성한 코드를 컴파일한 결과를 확인해 볼 수 있다.
+
+<br />
+<br />
+<br />
+
+## 0125
+
+# 변수와 함수 타입 정의
+## 기본 타입
+### String
+자바스크립트 변수 타입이 문자열인 경우 아래와 같이 선언해서 사용한다.  
+
+```typescript
+let str: string = 'hi';
+```
+* 위와 같이 `:`을 이용하여 자바스크립트 코드에 타입을 정의하는 방식을 타입 표기라고 한다.
+
+
+### Number
+```typescript
+let num: number = 10;
+```
+
+
+### Boolean
+```typescript
+let isLoggedIn: boolean = false;
+```
+
+
+### Array
+```typescript
+let arr: number[] = [1, 2, 3];
+let arr: Array<number> = [1, 2, 3];
+```
+* 배열의 경우에는 두 가지 방법으로 선언할 수 있다.
+* 배열 리터럴 앞에 배열에 포함될 값을 명시하거나, 제네릭을 사용하여 선언할 수 있다.
+
+
+### Tuple
+튜플은 배열의 길이가 고정되고 각 인덱스에 위치한 타입이 지정되어 있는 배열 형식을 의미한다.
+
+```typescript
+let address: [string, number] = ['gangnam', 100]; 
+```
+
+
+### Object
+```typescript
+let person: { name: string, age: number } = {
+  name: 'thor',
+  age: 1000
+}
+```
+
+
+### Any
+기존 자바스크립트로 구현되어 있는 웹 서비스 코드에 타입스크립트를 점진적으로 적용할 때 활용하면 좋은 타입  
+단어 의미 그대로 모든 타입에 대해서 허용
+
+```typescript
+let str: any = 'hi';
+let num: any = 10;
+let arr: any = ['a', 2, true];
+```
+
+
+### Void
+변수에는 `undefined`와 `null`만 할당하고, 함수에는 반환 값을 설정할 수  없는 타입
+
+```typescript
+let unuseful: void = undefined;
+
+function notuse(): void {
+  console.log('sth');
+}
+```
+
+
+
+## 함수 타입
+### 파라미터 타입 정의
+```typescript
+function sum(a: number, b: number) {
+  return a + b;
+}
+```
+* 타입스크립트에서는 함수의 인자를 모두 필수 값으로 간주하고, 추가로 인자를 넘기면 오류를 발생시킨다.
+
+### 반환값 타입 정의
+```typescript
+function getTen(): number {
+  return 10;
+}
+```
+* 반환값의 경우 함수명과 매개변수 뒤에 작성한다.
+* 적절한 값을 반환하지 않으면 컴파일러가 오류를 검출한다.
+
+
+### 옵셔널 파라미터
+매개변수의 갯수 만큼 인자를 넘기지 않아도 되는 자바스크립트의 특성을 살리기 위해서는 `?`를 이용해서 아래와 같이 정의할 수 있다.
+
+```typescript
+function sum(a: number, b?: number): number {
+  return a + b;
+}
+```
+
 <br />
 <br />
 <br />
