--- a/_posts/2022-01-25-0124-0130.md
+++ b/_posts/2022-01-25-0124-0130.md
@@ -74,98 +74,106 @@ tsconfig.json 파일을 생성하고 키 값 형태로 작성한다.
 ## 0125
 
 # 변수와 함수 타입 정의
+
 ## 기본 타입
+
 ### String
-자바스크립트 변수 타입이 문자열인 경우 아래와 같이 선언해서 사용한다.  
+
+자바스크립트 변수 타입이 문자열인 경우 아래와 같이 선언해서 사용한다.
 
 ```typescript
-let str: string = 'hi';
+let str: string = "hi";
 ```
-* 위와 같이 `:`을 이용하여 자바스크립트 코드에 타입을 정의하는 방식을 타입 표기라고 한다.
 
+- 위와 같이 `:`을 이용하여 자바스크립트 코드에 타입을 정의하는 방식을 타입 표기라고 한다.
 
 ### Number
+
 ```typescript
 let num: number = 10;
 ```
 
-
 ### Boolean
+
 ```typescript
 let isLoggedIn: boolean = false;
 ```
 
-
 ### Array
+
 ```typescript
 let arr: number[] = [1, 2, 3];
 let arr: Array<number> = [1, 2, 3];
 ```
-* 배열의 경우에는 두 가지 방법으로 선언할 수 있다.
-* 배열 리터럴 앞에 배열에 포함될 값을 명시하거나, 제네릭을 사용하여 선언할 수 있다.
 
+- 배열의 경우에는 두 가지 방법으로 선언할 수 있다.
+- 배열 리터럴 앞에 배열에 포함될 값을 명시하거나, 제네릭을 사용하여 선언할 수 있다.
 
 ### Tuple
+
 튜플은 배열의 길이가 고정되고 각 인덱스에 위치한 타입이 지정되어 있는 배열 형식을 의미한다.
 
 ```typescript
-let address: [string, number] = ['gangnam', 100]; 
+let address: [string, number] = ["gangnam", 100];
 ```
-
 
 ### Object
+
 ```typescript
-let person: { name: string, age: number } = {
-  name: 'thor',
-  age: 1000
-}
+let person: { name: string; age: number } = {
+  name: "thor",
+  age: 1000,
+};
 ```
 
-
 ### Any
+
 기존 자바스크립트로 구현되어 있는 웹 서비스 코드에 타입스크립트를 점진적으로 적용할 때 활용하면 좋은 타입  
 단어 의미 그대로 모든 타입에 대해서 허용
 
 ```typescript
-let str: any = 'hi';
+let str: any = "hi";
 let num: any = 10;
-let arr: any = ['a', 2, true];
+let arr: any = ["a", 2, true];
 ```
 
-
 ### Void
-변수에는 `undefined`와 `null`만 할당하고, 함수에는 반환 값을 설정할 수  없는 타입
+
+변수에는 `undefined`와 `null`만 할당하고, 함수에는 반환 값을 설정할 수 없는 타입
 
 ```typescript
 let unuseful: void = undefined;
 
 function notuse(): void {
-  console.log('sth');
+  console.log("sth");
 }
 ```
 
-
-
 ## 함수 타입
+
 ### 파라미터 타입 정의
+
 ```typescript
 function sum(a: number, b: number) {
   return a + b;
 }
 ```
-* 타입스크립트에서는 함수의 인자를 모두 필수 값으로 간주하고, 추가로 인자를 넘기면 오류를 발생시킨다.
+
+- 타입스크립트에서는 함수의 인자를 모두 필수 값으로 간주하고, 추가로 인자를 넘기면 오류를 발생시킨다.
 
 ### 반환값 타입 정의
+
 ```typescript
 function getTen(): number {
   return 10;
 }
 ```
-* 반환값의 경우 함수명과 매개변수 뒤에 작성한다.
-* 적절한 값을 반환하지 않으면 컴파일러가 오류를 검출한다.
 
+- 반환값의 경우 함수명과 매개변수 뒤에 작성한다.
+- 적절한 값을 반환하지 않으면 컴파일러가 오류를 검출한다.
 
 ### 옵셔널 파라미터
+
 매개변수의 갯수 만큼 인자를 넘기지 않아도 되는 자바스크립트의 특성을 살리기 위해서는 `?`를 이용해서 아래와 같이 정의할 수 있다.
 
 ```typescript
@@ -173,6 +181,153 @@ function sum(a: number, b?: number): number {
   return a + b;
 }
 ```
+
+<br />
+<br />
+<br />
+
+## 0126
+
+# 인터페이스 & 타입 별칭
+
+할일 관리 애플리케이션 실습을 진행하며 공부한 타입스크립트 기본 적용을 시도해보았다.  
+타입을 일일히 작성하며 느낀 점은 객체의 경우 매번 중복해서 작성하는 데에 불편함을 느꼈고, 코드의 가독성에도 좋지 않다는 생각이 들었다.  
+이 문제를 해결하기 위해 인터페이스라는 개념에 대해 학습해보았다.
+
+## 인터페이스란?
+
+인터페이스는 상호 간에 정의한 약속 혹은 규칙을 의미한다. 타입스크립트에서의 인터페이스는 보통 다음과 같은 범주에 대해 약속을 정의할 수 있다.
+
+- 객체의 스펙(속성과 속성의 타입)
+- 함수의 파라미터
+- 함수의 스펙(파라미터, 반환 타입 등)
+- 배열과 객체를 접근하는 방식
+- 클래스
+
+```typescript
+interface User {
+  age: number;
+  name: string;
+}
+
+let junghoon: User = {
+  age: 27,
+  name: "정훈",
+};
+```
+
+### 함수에 인터페이스 적용
+
+```typescript
+function getUser(user: User) {
+  console.log(user);
+}
+
+const capt = {
+  name: "캡틴",
+  age: 100,
+};
+getUser(capt);
+```
+
+- 파라미터에 인터페이스를 지정하고, 함수를 호출할 때 인자가 인터페이스의 규칙을 따르는지 확인해준다.
+- 인터페이스를 인자로 받아 사용할 때, 인터페이스에 정의된 속성과 타입의 조건만 만족한다면 객체의 속성 갯수가 더 많아도 상관 없다.
+
+### 함수의 스펙을 인터페이스로 정의
+
+```typescript
+interface SumFunction {
+  (a: number, b: number): number;
+}
+
+let sum: SumFunction;
+sum = function (a: number, b: number): number {
+  return a + b;
+};
+```
+
+- 라이브러리를 직접 만들거나 협업을 할 때 틀을 잡는 용도로 활용 가능
+
+### 인덱싱 방식 정의
+
+```typescript
+interface StringArray {
+  [index: number]: string;
+}
+
+const arr: StringArray = ["a", "b", "c"];
+arr[0] = 10; // 에러
+```
+
+- 배열에 인덱스로 접근했을 때 요소의 값은 모두 문자열이라는 것을 정의한다.
+- 즉, 모든 요소는 문자열 타입이다.
+
+### 딕셔너리 패턴
+
+위의 인덱싱 방식과 비슷한 패턴이다
+
+```typescript
+interface StringRegexDictionary {
+  [key: string]: RegExp;
+}
+
+var obj: StringRegexDictionary = {
+  sth: /abc/,
+  cssFile: /\.css$/,
+  jsFile: /\.js$/,
+};
+
+obj["cssFile"] = "a";
+```
+
+- 값으로 오는 모든 값들은 정규표현식 형태여야 한다.
+
+### 인터페이스 확장(상속)
+
+인터페이스는 다른 인터페이스를 상속받아 확장이 가능하다.
+
+```typescript
+interface Person {
+  name: string;
+  age: number;
+}
+
+interface Developer extends Person {
+  language: string;
+}
+
+const junghoon: Developer = {
+  language: "ts",
+  age: 27,
+  name: "jh",
+};
+```
+
+## 타입 별칭
+
+타입 별칭은 특정 타입이나 인터페이스를 참조할 수 있는 타입 변수를 의미한다.
+
+```typescript
+type myName = string;
+const name: MyName = "capt";
+
+type Developer = {
+  name: string;
+  skill: string;
+};
+```
+
+### 타입 별칭의 특징
+
+타입 별칭은 타입 값을 생성하는 것이 아니라 정의한 타입에 대해 나중에 쉽게 참고할 수 있게 이름을 부여하는 것과 같다.
+
+인터페이스로 선언한 타입을 프리뷰 했을 때는 interface 명만 나타나는 반면,  
+타입 별칭을 사용해서 선언한 타입을 프리뷰로 확인했을 때는 속성과 그 속성의 타입까지 확인할 수 있다.
+
+### type과 interface의 차이점
+
+- 타입 별칭과 인터페이스의 가장 큰 차이점은 타입의 확장 가능 / 불가능 여부이다.
+- 인터페이스는 확장이 가능한데 반해 타입 별칭은 확장이 불가능하기에 가능한 type 보다 interface로 선언해서 사용하는 것이 좋다.
 
 <br />
 <br />
