--- a/_posts/2022-01-25-0124-0130.md
+++ b/_posts/2022-01-25-0124-0130.md
@@ -333,6 +333,327 @@ type Developer = {
 <br />
 <br />
 
+## 0127
+
+# 연산자를 이용한 타입 정의
+
+## Union Type
+
+유니온 타입은 자바스크립트 OR 연산자 `||`와 같이 A이거나 B이다 라는 의미의 타입이다.
+
+```typescript
+function logText(text: string | number) {}
+```
+
+- 위 함수의 파라미터 text에는 숫자나 문자 타입의 값이 모두 올 수 있다.
+- 이처럼 `|` 연산자를 이용하여 타입을 여러 개 연결하는 방식을 유니온 타입 정의 방식이라고 부른다.
+
+### 장점
+
+```typescript
+function logMessage(value: string | number) {
+  if (typeof value === "number") {
+    value.toLocaleString();
+  }
+  if (typeof value === "string") {
+    value.toString();
+  }
+  throw new TypeError("value must be string or number");
+}
+```
+
+- 위와 같이 코드를 작성하면 value의 타입이 추론되기 때문에 타입과 관련된 API를 쉽게 자동완성할 수 있다.
+- 위와 같이 특정 타입으로 타입의 범위를 좁혀가는 과정을 타입 가드라고 한다.
+
+### 특징
+
+```typescript
+interface Developer {
+  name: string;
+  skill: string;
+}
+
+interface Person {
+  name: string;
+  age: number;
+}
+
+function askSomeone(someone: Developer | Person) {
+  someone.name;
+  someone.skill; // error
+}
+```
+
+- 유니온 타입을 사용하면 Developer와 Person의 모든 속성을 사용할 수 있을 것이라고 생각할 수 있지만 실제로는 그렇지 않다.
+- 타입스크립트 관점에서는 someone이 어떤 값이 들어올 지 모르기 때문에 타입 검증도 없이 공통되지 않은 속성을 사용하게 되면 에러를 발생할 수 있다고 생각한다.
+- 그렇기에 이러한 속성을 사용하려면 타입 가드를 사용해야 하고, 일반적으로는 공통된 속성만 사용 가능하다.
+
+## Intersection Type
+
+- 인터섹션 타입은 여러 타입을 모두 만족하는 하나의 타입이다.
+- 이는 `&` 연산자를 이용해 여러 개의 타입 정의를 하나로 합치는 방식이다.
+
+```typescript
+function askSomeone(someone: Developer & Person) {
+  someone.name;
+  someone.skill;
+  someone.age;
+}
+```
+
+- 인터섹션 타입은 Developer과 Person의 모든 속성에 접근이 가능하다.
+- 단, 인자로 someone을 넘길 때 Developer과 Person에 해당하는 모든 속성을 넘겨야만 한다.
+
+# 이넘(Enum)
+
+Enum은 특정 값들의 집합을 의미하는 자료형이다.
+
+## 숫자형 이넘
+
+타입스크립트에서 숫자형 이넘은 다음과 같이 선언한다.
+
+```typescript
+enum Direction {
+  Up = 1,
+  Down,
+  Left,
+  Right,
+}
+```
+
+- 위와 같이 숫자형 이넘을 선언할 때 초기 값을 주면 초기 값부터 차례로 1씩 증가한다.
+- 초기 값을 주지 않으면 0부터 차례로 1씩 증가한다.
+- 리버스 매핑은 숫자형 이넘에만 존재하는 특징으로 이넘의 키로 값을, 값으로 키를 얻을 수 있는 특징이다.
+
+## 문자형 이넘
+
+- 문자형 이넘은 이넘 값 전부 다 특정 문자 또는 다른 이넘 값으로 초기화 해줘야 한다.
+- 숫자형 이넘과는 다르게 auto-incrementing이 없다.
+
+```typescript
+enum Shoes {
+  Nike = "나이키",
+  Adidas = "아디다스",
+}
+
+let myShoes = Shoes.Adidas;
+console.log(myShoes); // 아디다스
+```
+
+- 이넘에 문자와 숫자를 혼합하여 생성할 순 있지만 권고하지 않는다.
+
+### 활용
+
+```typescript
+enum Answer {
+  Yes = "Y",
+  No = "N",
+}
+
+function askQuestion(answer: Answer) {
+  if (answer === Answer.Yes) {
+    console.log("정답입니다");
+  }
+  if (answer === Answer.No) {
+    console.log("오답입니다");
+  }
+}
+
+askQuestion(Answer.Yes);
+askQuestion("Yes"); // 에러
+```
+
+- 기존에 문자열로 하드 코딩하던 코드를 enum 타입으로 비교하는 코드로 변경해 안정성과 가독성을 높일 수 있다.
+- 파라미터 타입을 enum 타입으로 지정하여 문자열은 인자로 넘길 수 없다.
+
+# 클래스
+
+```typescript
+class Person {
+  name: string;
+  age: number;
+
+  constructor(name: string, age: number) {
+    this.name = name;
+    this.age = age;
+  }
+}
+```
+
+- 타입스크립트에서의 클래스는 자바스크립트에서의 클래스와는 다르게 초기화할 속성들을 상단에 타입과 함께 정의해둬야 한다.
+- constructor 파라미터에서 타입을 정의할 수도 있다.
+
+### readonly
+
+클래스의 속성에 `readonly` 키워드를 사용하면 접근만 가능하다.
+
+```typescript
+class Person {
+  readonly name: string;
+
+  constructor(readonly name: string) {}
+}
+```
+
+- readonly를 사용하면 constructor 함수에 초기 값 설정 로직을 넣어줘야 하므로 인자에 `readonly` 키워드를 추가해서 코드를 줄일 수 있다.
+
+### Accessor
+
+- 타입스크립트는 객체의 특정 속성의 접근과 할당에 대해 제어할 수 있다.
+- 이를 위해서는 해당 객체가 클래스로 생성한 객체여야 한다.
+
+```typescript
+class Developer {
+  private name: string;
+
+  get name(): string {
+    return this.name;
+  }
+
+  set name(newValue: string) {
+    this.name = newValue;
+  }
+}
+```
+
+- 위와 같이 name 속성에 제약 사항을 추가하고 싶다면 get과 set을 활용할 수 있다.
+
+# 제네릭
+
+- 제네릭은 타입을 마치 함수의 파라미터처럼 사용하는 것을 의미한다.
+- 한가지 타입보다 여러 가지 타입에서 동작하는 컴포넌트를 생성하는데 사용된다.
+
+```typescript
+function getText<T>(text: T): T {
+  return text;
+}
+
+getText<string>("hi"); // 제네릭 타입이 `<string>`이 됨
+getText<number>(10); // 제네릭 타입이 `<number>`이 됨
+getText<boolean>(true); // 제네릭 타입이 `<boolean>`이 됨
+```
+
+- 제네릭을 사용하면 함수를 호출할 때 함수에서 사용할 타입 값을 넘길 수 있다.
+- 예를 들어 `getText<string>('hi')`를 호출하면 제네릭은 다음과 같이 동작한다.
+
+```typescript
+function getText<string>(text: string): string {
+  return text;
+}
+```
+
+## 제네릭을 사용하는 이유
+
+```typescript
+function logText(text: string): string {
+  return text;
+}
+```
+
+위 코드는 인자를 하나 넘겨 받아 반환해주는 함수다. 여기서 함수의 인자와 반환값은 string으로 지정되어 있지만 여러 가지 타입을 허용하고 싶다면 any를 사용할 수 있다.
+
+하지만 any 타입의 경우 함수의 인자로 어떤 타입이 들어갔고 어떤 값이 반환되는지 알 수 없다. any 타입은 타입 검사를 하지 않기 때문이다. 또한 타입은 보다 구체적으로 명시하는 것이 더 좋다.
+
+이러한 문제를 해결하는 것이 **제네릭**이다.
+
+```typescript
+function logText<T>(text: T): T {
+  return text;
+}
+```
+
+- 함수의 이름 바로 뒤에 `<T>`라는 코드를 추가한다. 그리고 함수의 인자와 반환 값에 모두 T라는 타입을 추가하면 함수를 호출할 때 넘긴 타입에 대해 타입스크립트가 추정할 수 있게 된다.
+
+이렇게 선언한 함수는 2가지 방법으로 호출 가능하다.
+
+```typescript
+const text = logText<string>("Hello Generic");
+const text = logText("Hello Generic");
+```
+
+- 보통 두 번째 방법이 코드도 더 짧고 가독성이 좋기 때문에 흔하게 사용된다.
+- 그렇지만 복잡한 코드에서 두 번째 코드로 타입 추정이 되지 않는다면 첫 번째 방법을 사용하면 된다.
+
+## 인터페이스에 제네릭 선언
+
+```typescript
+interface Dropdown<T> {
+  value: T;
+  selected: boolean;
+}
+
+const obj: Dropdown<string> = { value: "abc", selected: false };
+```
+
+- 인터페이스를 선언할 때, 제네릭을 사용하여 타입 코드의 양을 줄일 수 있다.
+- 예를 들어, value의 값으로 number나 string이 올 수 있는 인터페이스를 작성해야 한다면 각각 따로 작성하는 것이 아닌 제네릭을 활용하여 하나의 인터페이스만 작성할 수 있다.
+
+## 타입 제한
+
+### 제네릭 타입 변수
+
+```typescript
+function logText<T>(text: T): T {
+  console.log(text.length); // Error: T doesn't have .length
+  return text;
+}
+```
+
+- 위와 같이 코드를 작성하게 되면 text에 length 프로퍼티에 접근할 수 없기 때문에 에러가 발생한다.
+- 이런 경우에는 제네릭에 타입을 줄 수 있다.
+
+```typescript
+function logText<T>(text: T[]): T[] {
+  console.log(text.length); // 제네릭 타입이 배열이기 때문에 length를 허용한다.
+  return text;
+}
+```
+
+- 이 코드는 일단 T라는 타입 변수를 받고, 인자 값으로는 배열 형태의 T를 받는다.
+- `T[]` 대신 `Array<T>`와 같이 좀 더 명시적으로 제네릭 타입을 선언할 수도 있다.
+
+### 정의된 타입으로 타입 제한
+
+```typescript
+interface LengthType {
+  length: number;
+}
+
+function logTextLength<T extends LengthType>(text: T): T {
+  console.log(text.length);
+  return text;
+}
+
+logTextLength(10); // 숫자 타입에는 'length'가 존재하지 않으므로 오류 발생
+logTextLength({ length: 0, value: "hi" }); // text.length에 접근 가능하므로 오류 없음
+```
+
+- 제네릭 타입 변수 말고도 타입 힌트를 줄 수 있는 방법이 있다.
+- 타입 T를 구체적으로 정의하지 않고도 length 속성을 허용하려면 위와 같이 extends 키워드로 특정 인터페이스를 지정한다.
+- 위와 같이 작성하게 되면 length에 대해 동작하는 인자만 넘겨받을 수 있게 된다.
+
+### keyof로 제네릭 타입 제한
+
+```typescript
+interface ShoppingItem {
+  name: string;
+  price: number;
+  stock: number;
+}
+
+function getShoppingItemOption<T extends keyof ShoppingItem>(itemOption: T): T {
+  return itemOption;
+}
+getShoppingItemOption(10); // 에러 발생. 인자로는 ShoppingItem의 키값 중 하나만 넘길 수 있다.
+```
+
+- getShoppingItemOption 함수에서 인터페이스의 key 값 중 하나만 받을 수 있도록 제약할 수 있다.
+- 제네릭에다가 extends keyof 키워드로 인터페이스를 지정하면 인터페이스에 존재하는 키 중 한 가지가 제네릭이 된다는 뜻이다.
+
+<br />
+<br />
+<br />
+
 ## 0129
 
 # 최신 브라우저 내부
