--- a/_posts/2022-01-25-0124-0130.md
+++ b/_posts/2022-01-25-0124-0130.md
@@ -67,6 +67,11 @@ tsconfig.json 파일을 생성하고 키 값 형태로 작성한다.
 
 위의 사이트에서 타입스크립트로 작성한 코드를 컴파일한 결과를 확인해 볼 수 있다.
 
+> **reference**  
+> [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
+> [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
+> [타입스크립트 입문 - 기초부터 실전까지](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%9E%85%EB%AC%B8/dashboard)
+
 <br />
 <br />
 <br />
@@ -181,6 +186,11 @@ function sum(a: number, b?: number): number {
   return a + b;
 }
 ```
+
+> **reference**  
+> [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
+> [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
+> [타입스크립트 입문 - 기초부터 실전까지](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%9E%85%EB%AC%B8/dashboard)
 
 <br />
 <br />
@@ -328,6 +338,11 @@ type Developer = {
 
 - 타입 별칭과 인터페이스의 가장 큰 차이점은 타입의 확장 가능 / 불가능 여부이다.
 - 인터페이스는 확장이 가능한데 반해 타입 별칭은 확장이 불가능하기에 가능한 type 보다 interface로 선언해서 사용하는 것이 좋다.
+
+> **reference**  
+> [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
+> [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
+> [타입스크립트 입문 - 기초부터 실전까지](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%9E%85%EB%AC%B8/dashboard)
 
 <br />
 <br />
@@ -649,6 +664,162 @@ getShoppingItemOption(10); // 에러 발생. 인자로는 ShoppingItem의 키값
 
 - getShoppingItemOption 함수에서 인터페이스의 key 값 중 하나만 받을 수 있도록 제약할 수 있다.
 - 제네릭에다가 extends keyof 키워드로 인터페이스를 지정하면 인터페이스에 존재하는 키 중 한 가지가 제네릭이 된다는 뜻이다.
+
+> **reference**  
+> [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
+> [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
+> [타입스크립트 입문 - 기초부터 실전까지](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%9E%85%EB%AC%B8/dashboard)
+
+<br />
+<br />
+<br />
+
+## 0128
+
+# 전화번호 애플리케이션 실습
+
+지금까지 공부한 타입스크립트 내용을 가지고 간단한 실습을 진행해보았다.
+
+전화번호 리스트를 반환하는 api를 가정하고 코드를 작성한 뒤, 이와 관련된 코드들을 클래스로 묶어서 타입스크립트를 적용해 보았다.
+
+## tsconfig 설정
+
+```json
+{
+  "compilerOptions": {
+    "allowJs": true,
+    "checkJs": true,
+    "target": "es5",
+    "lib": ["es2015", "dom", "dom.iterable"],
+    "noImplicitAny": true,
+    "strict": true,
+    "strictFunctionTypes": true
+  },
+  "include": ["./src/**/*"]
+}
+```
+
+- strict와 strictFuncitonTypes를 true로 설정하여 명시적으로 엄격하게 검사하도록 했다.
+
+## 알게 된 점
+
+### Promise를 이용한 API 함수 타입 정의
+
+```typescript
+interface PhoneNumberDictionary {
+  [phone: string]: {
+    num: number;
+  };
+}
+
+interface Contact {
+  name: string;
+  address: string;
+  phones: PhoneNumberDictionary;
+}
+
+// api
+function fetchContacts(): Promise<Contact[]> {
+  const contacts: Contact[] = [
+    {
+      name: "Tony",
+      address: "Malibu",
+      phones: {
+        home: {
+          num: 11122223333,
+        },
+        office: {
+          num: 44455556666,
+        },
+      },
+    },
+    {
+      name: "Banner",
+      address: "New York",
+      phones: {
+        home: {
+          num: 77788889999,
+        },
+      },
+    },
+    {
+      name: "마동석",
+      address: "서울시 강남구",
+      phones: {
+        home: {
+          num: 213423452,
+        },
+        studio: {
+          num: 314882045,
+        },
+      },
+    },
+  ];
+  return new Promise((resolve) => {
+    setTimeout(() => resolve(contacts), 2000);
+  });
+}
+```
+
+- 위와 같이 프로미스를 반환하는 코드이기에 처음에는 함수의 반환값으로 Promise를 지정했다.
+- 하지만 비동기 코드 내부에서는 무슨 일이 일어나는지 타입스크립트가 알 수 없기 때문에 프로미스 내부적으로 제네릭을 전달받아야 하도록 구현되어 있다.
+- 그렇기에 프로미스를 사용할 때는 제네릭으로 Contact 배열을 전달해줘서 문제를 해결했다.
+
+### Enum 활용
+
+PhoneType의 종류가 home, office, studio 세 종류가 존재할 때, 이 중 하나의 값만 받을 수 있도록 enum을 정의하고 활용해보았다.
+
+```typescript
+enum PhoneType {
+  Home = 'home',
+  Office = 'office',
+  Studio = 'studio',
+}
+
+findContactByPhone(phoneNumber: number, phoneType: PhoneType): Contact[] {
+  return this.contacts.filter(
+    contact => contact.phones[phoneType].num === phoneNumber
+  );
+}
+```
+
+- 위와 같이 작성하니 enum 내부에 값 중 하나인지 체크해주고, 리터럴이 아닌 이넘을 자동완성과 함께 사용하며 개발의 용이성을 느낄 수 있었다.
+
+### 타입 모듈화
+
+타입스크립트에서도 인터페이스나 enum으로 선언한 것들을 별도의 모듈로 구분하고, import 해서 사용하여 폴더를 구조화 하였다.
+
+```typescript
+// types.ts
+interface PhoneNumberDictionary {
+  [phone: string]: {
+    num: number;
+  };
+}
+
+interface Contact {
+  name: string;
+  address: string;
+  phones: PhoneNumberDictionary;
+}
+
+enum PhoneType {
+  Home = "home",
+  Office = "office",
+  Studio = "studio",
+}
+
+export { Contact, PhoneType };
+```
+
+사용법은 ES6의 모듈과 개념이 유사하다.
+
+인터페이스와 enum 등을 어떻게 더 상세하게 폴더 구조화할 지는 추후 프로젝트에 적용하며 더 고민해봐야겠다.
+
+> **reference**  
+> [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
+> [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
+> [타입스크립트 입문 - 기초부터 실전까지](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%9E%85%EB%AC%B8/dashboard)
 
 <br />
 <br />
