--- a/_posts/2022-02-04-0131-0206.md
+++ b/_posts/2022-02-04-0131-0206.md
@@ -237,3 +237,135 @@ notempty2 = notempty1; // Error
 > [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
 > [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
 > [타입스크립트 입문 - 기초부터 실전까지](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%9E%85%EB%AC%B8/dashboard)
+
+<br />
+<br />
+<br />
+
+## 0202
+
+# 유틸리티 타입
+
+- 이미 정의해 놓은 타입을 변환할 때 사용하기 좋은 타입 문법
+- 유틸리티 타입을 쓰지 않더라도 기존의 인터페이스, 제네릭 등의 기본 문법으로 충분히 타입을 변환할 수 있지만 유틸리티 타입을 쓰면 간결한 문법으로 타입을 정의할 수 있다.
+
+## Pick
+
+Pick 타입은 특정 타입에서 몇 개의 속성을 선택하여 타입을 정의할 수 있다.
+
+```typescript
+interface Product {
+  id: number;
+  name: string;
+  price: number;
+  brand: string;
+  stock: number;
+}
+
+// 특정 상품의 상세 정보를 나타내기 위한 함수
+type ShoppingItem = Pick<Product, "id" | "name" | "price">;
+function displayProductDetail(shoppingItem: ShoppingItem) {}
+```
+
+- 예를 들어, 위와 같이 정의되어 있는 인터페이스의 속성 중 일부만 사용하고 싶은 경우 새로운 인터페이스를 작성하는 것이 아니라 Pick 유틸리티 타입을 사용하여 코드의 양을 줄일 수 있다.
+- 제네릭의 첫 번째 값으로 속성을 꺼낼 인터페이스를 두 번째 값으로 꺼낼 속성을 유니온 타입으로 설정하여 사용한다.
+
+## Omit
+
+Omit 타입은 특정 타입에서 지정된 속성만 제거한 타입을 정의해 준다.
+
+```typescript
+const shirt: Omit<Product, "brand" | "stock"> = {
+  id: 1,
+  name: "T-shirt",
+  price: 500,
+};
+```
+
+## Partial
+
+Partial 타입은 특정 타입의 부분 집합을 만족하는 타입을 정의할 수 있다.
+
+```typescript
+interface UpdateProduct {
+  id?: number;
+  name?: string;
+  price?: number;
+  brand?: string;
+  stock?: number;
+}
+
+type UpdateProduct = Partial<Product>;
+
+function updateProductItem(productItem: UpdateProduct) {}
+```
+
+- 위에 정의한 인터페이스와 타입은 같은 의미를 가지고 있다.
+- 즉, Partial 유틸리티 타입을 사용하면 모든 속성을 자동으로 옵셔널 처리해 준다.
+- 예를 들어, 속성 중 변경할 속성만 전달해야 하는 경우 유용하게 사용할 수 있다.
+
+### 유틸리티 타입 구현하기 - Partial
+
+```typescript
+interface UserProfileUpdate {
+  username?: string;
+  email?: string;
+  profilePhotoUrl?: string;
+}
+
+type UserProfileUpdate = {
+  username?: UserProfile["username"];
+  email?: UserProfile["email"];
+  profilePhotoUrl?: UserProfile["profilePhotoUrl"];
+};
+```
+
+- 위의 인터페이스와 타입의 결과는 동일하다.
+- 특정 인터페이스를 기준으로 키로 접근하여 타입 값을 얻는 방식으로 변경하였다.
+
+```typescript
+type UserProfileUpdate = {
+  [p in keyof UserProfile]?: UserProfile[p];
+};
+```
+
+- in 연산자는 마치 for in 문과 같은 효과를 낸다. 우항에 위치한 값의 갯수만큼 반복하고, 각 요소가 좌항의 임의의 변수에 할당되어 사용한다.
+- keyof 연산자는 UserProfile에 정의되어 있는 키들의 목록을 반환하는 연산자이다.
+- 즉, 특정 인터페이스에 정의된 키들의 목록을 받아와 그 횟수만큼 반복하고, 값으로 Userprofile의 값에 접근하여 옵셔널 속성으로 선언하겠다는 의미이다.
+
+```typescript
+type Partial<T> = {
+  [P in keyof T]?: T[P];
+};
+```
+
+- 최종적으로 구현된 Partial 유틸리티 타입이다. vscode에서 실제 구현된 코드를 확인하면 같은 것을 확인할 수 있다.
+- 제네릭으로 타입을 전달받아 해당 인터페이스를 키, 값으로 하여 모든 속성을 옵셔널 속성으로 설정하는 역할을 한다.
+
+## 맵드 타입
+
+맵드 타입이란 기존에 정의되어 있는 타입을 새로운 타입으로 변환해 주는 문법을 의미한다.  
+마치 자바스크립트 `map()` API 함수를 타입에 적용한 것과 같은 효과를 가진다.
+
+### 기본 문법
+
+`{ [ P in K ] : T }`
+
+```typescript
+type Heroes = "Hulk" | "Thor" | "Capt";
+
+type HeroProfiles = { [K in Heroes]: number };
+const heroInfo: HeroProfiles = {
+  Hulk: 54,
+  Thor: 1000,
+  Capt: 33,
+};
+```
+
+- `[K in Heroes]` 부분은 자바스크립트의 `for in` 문법과 유사하게 동작한다.
+- Heroes 타입의 3개의 문자열을 각각 순회하여 number 타입을 값으로 가지는 객체의 키로 정의가 된다.
+
+> **reference**  
+> [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
+> [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
+> [타입스크립트 입문 - 기초부터 실전까지](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%9E%85%EB%AC%B8/dashboard)
