--- a/_posts/2022-02-04-0131-0206.md
+++ b/_posts/2022-02-04-0131-0206.md
@@ -368,4 +368,186 @@ const heroInfo: HeroProfiles = {
 > **reference**  
 > [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
 > [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
-> [타입스크립트 입문 - 기초부터 실전까지](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%9E%85%EB%AC%B8/dashboard)
+> [실전 프로젝트로 배우는 타입스크립트](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%8B%A4%EC%A0%84/dashboard)
+
+<br />
+<br />
+<br />
+
+## 0204
+
+# 국가별 코로나 정보 애플리케이션 실습
+
+지금까지 배운 내용들을 활용하여 나라별로 코로나 정보를 나타내는 애플리케이션 실습을 진행하고자 한다.  
+이번 실습을 통해 타입스크립트 세팅이나 여러 문제 상황들에서의 해결을 경험해보고, 다음으로는 이전에 내가 자바스크립트로 진행했던 프로젝트에 타입스크립트를 사용하여 변환하는 작업을 해볼 계획이다.
+
+## 자바스크립트 코드에 타입스크립트를 적용할 때 주의해야 할 점
+
+1. 기능적인 변경은 절대 하지 않을 것
+2. 처음부터 타입을 엄격하게 적용하지 않을 것 (점진적으로 strict 레벨을 증가)
+3. 테스트 커버리지가 낮을 땐 함부로 타입스크립트를 적용하지 않을 것
+
+## 타입스크립트 프로젝트 구성 및 기본 설정
+
+- NPM 초기화
+- 타입스크립트 라이브러리 설치
+- 타입스크립트 설정 파일 생성 및 기본 값 추가
+- 자바스크립트 파일을 타입스크립트 파일로 변환
+- `tsc` npm script 작성 후 명령어로 타입스크립트 변환하기
+
+### NPM 초기화 및 타입스크립트 라이브러리 설치
+
+`npm init -y`
+
+`npm i -D typescript`
+
+### 타입스크립트 설정 파일 생성 및 기본 값 추가
+
+tsconfig.json 파일 생성
+
+```json
+{
+  "compilerOptions": {
+    "allowJs": true,
+    "target": "es5",
+    "outDir": "./built",
+    "moduleResolution": "Node",
+    "lib": ["ES2015", "DOM", "DOM.Iterable"]
+  },
+  "include": ["./src/**/*"]
+}
+```
+
+- target 속성은 컴파일 할 결과물의 버전 설정
+- outDir 속성은 빌드 파일 폴더 설정
+- moduleResolution 속성은 Promise를 인식시켜주기 위한 옵션
+- lib 속성은 Promise, DOM 타입을 인식시켜주기 위한 옵션
+- include 속성은 타입스크립트 컴파일 대상을 설정
+
+### `tsc` npm script 작성 후 명령어로 타입스크립트 변환하기
+
+```json
+"scripts": {
+  "build": "tsc"
+},
+```
+
+### 타입스크립트 컴파일 동작 특징
+
+1.  컴파일 시 타입 에러가 나더라도 런타임 에러와는 직접적인 연관이 없을 수도 있다. 즉, 타입 에러와 런타임 에러는 독립적이다.
+2.  모두 확장자명이 ts인 파일이 아니더라도 컴파일을 수행하는데 문제가 없다. 즉, 모든 파일을 ts 파일로 변경할 필요는 없다. (점진적인 변환!)
+
+## 모듈화를 위한 프로젝트 환경 구성
+
+```bash
+npm i -D typescript @babel/core @babel/preset-env @babel/preset-typescript @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint prettier eslint-config-prettier eslint-plugin-prettier
+```
+
+타입스크립트, 바벨, aslant, prettier와 필요한 플러그인을 개발 의존성으로 설치한다.
+
+### eslint 설정 파일
+
+```javascript
+// .eslintrc.js
+module.exports = {
+  root: true,
+  env: {
+    browser: true,
+    node: true,
+  },
+  extends: [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+  ],
+  plugins: ["prettier", "@typescript-eslint"],
+  rules: {
+    "prettier/prettier": [
+      "error",
+      {
+        singleQuote: true,
+        semi: true,
+        useTabs: false,
+        tabWidth: 2,
+        printWidth: 80,
+        bracketSpacing: true,
+        arrowParens: "avoid",
+      },
+    ],
+  },
+  parserOptions: {
+    parser: "@typescript-eslint/parser",
+  },
+};
+
+// .eslintignore
+node_modules;
+```
+
+### eslint 플러그인 관련 설정
+
+명령어 실행 창에서 settings.json 입력
+
+```json
+"editor.codeActionsOnSave": {
+  "source.fixAll.eslint": true
+},
+"eslint.alwaysShowStatus": true,
+"eslint.workingDirectories": [
+  {
+    "mode": "auto"
+  }
+],
+"eslint.validate": ["javascript", "typescript"],
+```
+
+추가적으로 vscode 설정에서 format on save 체크 해제
+
+### tslint가 아닌 eslint를 사용하는 이유
+
+eslint가 tslint 보다 좋은 퍼포먼스를 냈기 때문에 eslint를 지원하기로 결정
+
+## 자바스크립트 프로젝트에 타입스크립트를 적용하는 순서
+
+1. 타입스크립트 환경 설정 및 ts 파일로 변환
+2. `any` 타입 선언
+3. `any` 타입을 더 적절한 타입으로 변경
+
+### 엄격하지 않은 타입 환경에서 프로젝트 돌려보기
+
+- 프로젝트에 테스트 코드가 있다면 테스트 코드가 통과하는지 먼저 확인할 것
+- 프로젝트의 js 파일을 ts 파일로 변경할 것
+- 타입스크립트 컴파일 에러가 나는 것 위주로 먼저 에러가 나지 않게 수정
+  - 여기서, 기능을 사소하게라도 변경하지 않도록 주의
+
+### 명시적인 any 선언하기
+
+- 타입스크립트 설정 파일에 `noImplicitAny: true`를 추가
+- 가능한 타입을 적용할 수 있는 모든 곳에 타입을 적용
+  - 라이브러리를 쓰는 경우 DefinitelyTyped에서 @types 관련 라이브러리를 찾아 설치
+  - 타입을 정하기 어려운 곳이 있으면 명시적으로라도 any를 선언
+
+### strict 모드 설정하기
+
+tsconfig.json에 strict 설정 추가
+
+```json
+{
+  "strict": true,
+  "strictNullChecks": true,
+  "strictFunctionTypes": true,
+  "strictBindCallApply": true,
+  "strictPropertyInitialization": true,
+  "noImplicitThis": true,
+  "alwaysStrict": true
+}
+```
+
+- `strict: true` 옵션은 밑에 있는 모든 옵션을 true로 하는 것과 같다.
+- any로 되어 있는 타입을 최대한 더 적절한 타입으로 변경해야 한다.
+- as와 같은 타입 단언 키워드를 최대한 사용하지 않도록 고민해서 변경한다.
+
+> **reference**  
+> [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
+> [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
+> [실전 프로젝트로 배우는 타입스크립트](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%8B%A4%EC%A0%84/dashboard)
