--- a/_posts/2022-02-04-0131-0206.md
+++ b/_posts/2022-02-04-0131-0206.md
@@ -551,3 +551,172 @@ tsconfig.json에 strict 설정 추가
 > [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
 > [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
 > [실전 프로젝트로 배우는 타입스크립트](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%8B%A4%EC%A0%84/dashboard)
+
+<br />
+<br />
+<br />
+
+## 0205
+
+## 실습을 진행하며 배운점
+
+### 화살표 함수에 타입 추가하기
+
+```typescript
+arr.forEach((value: any) => {
+  // ...
+});
+```
+
+화살표 함수의 경우 인자가 하나이면 괄호가 생략이 가능했으나, 타입을 지정하기 위해서는 괄호를 필수로 붙여줘야 한다.
+
+### DOM 함수 관련 오류 해결
+
+```typescript
+const deathsTotal = document.querySelector(".deaths");
+
+function setTotalDeathsByCountry(data: any) {
+  deathsTotal.innerText = data[0].Cases;
+}
+```
+
+- document.querySelector로 가져온 값은 가장 기본 DOM 인터페이스인 Element로 타입이 추론된다.
+- 즉 dethsTotal은 Element 타입으로 추론되고, 이 인터페이스는 innerText를 가지고 않기 때문에 에러가 발생한다.
+- 이를 해결하기 위해서는 타입 단언을 사용하여 문제를 해결할 수 있다.
+
+```typescript
+const deathsTotal = $(".deaths") as HTMLParagraphElement;
+
+function setTotalDeathsByCountry(data: any) {
+  deathsTotal.innerText = data[0].Cases;
+}
+```
+
+- html 문서에서 태그의 종류를 확인하고, 그에 해당하는 인터페이스 타입으로 단언하면 문제를 해결할 수 있다.
+- 이와 같이 타입 단언은 DOM의 타입을 결정하는 데 자주 사용된다.
+
+### 외부 라이브러리 모듈화
+
+외부 라이브러리들이 CDN으로 불러와지는 경우, 외부 라이브러리들을 인식할 수 있는 형태로 모듈화 해야 하고 타입스크립트에 대한 정의를 들어가야 한다.
+
+외부 라이브러리는 크게 세 가지 유형으로 나뉜다.
+
+1. 설치하고 import 하면 타입 문제가 해결되는 경우
+   - axios처럼 잘 만들어진 라이브러리의 경우 설치 시, index.d.ts 파일을 제공하여 타입 문제가 발생하지 않는다.
+2. 설치하고 추가로 타입 선언 라이브러리를 설치해야 문제가 해결되는 경우
+   - 대부분의 라이브러리들은 추가로 타입 선언 라이브러리를 설치해야 타입스크립트에서 정상적으로 작동한다.
+   - 타입 선언 라이브러리들은 `@types/` 로 시작하는 명칭을 가지고 있다.
+   - 타입 선언 라이브러리를 설치하면 타입스크립트가 node_modules의 @types 폴더에 존재하는 타입 정의를 확인한다.
+3. 타입 선언 라이브러리가 제공되지 않는 경우
+   - `tsconfig.json` 파일에 `"typeRoots": ["./node_modules/@types", "./types"]`를 추가한다.
+   - typeRoots 속성은 타입 정의를 확인할 폴더를 정의한다.
+   - 루트에 types 폴더를 생성하고, 그 내부에 타입 정의를 할 라이브러리명의 폴더를 생성하고, 그 내부에 `index.d.ts` 파일을 생성하여 타입을 정의한다.
+
+### Definitely Typed
+
+- 자바스크립트 라이브러리를 타입스크립트에서 사용하려면 타입 정의가 필요한데, 미리 만들어두어 오픈소스화 한 것
+- `@types/`로 시작하는 라이브러리
+
+### d.ts 파일
+
+- 타입스크립트 선언 파일 `d.ts`는 타입 스크립트 코드의 타입 추론을 돕는 파일이다.
+- 예를 들어, 전역 변수로 선언한 변수를 특정 파일에서 `import` 구문 없이 사용하는 경우 해당 변수를 인식하지 못한다.
+- 그럴 때 변수를 선언해서 에러가 나지 않게 할 수 있다.
+- 외부 라이브러리를 타입 정의를 선언할 때 주로 사용한다.
+
+```typescript
+declare const global = "global";
+```
+
+### API 함수 타입 정의
+
+api를 호출하는 함수와 그 함수를 사용하는 함수에서의 타입 정의를 진행하며 과정을 정리하고자 한다.
+
+axis 라이브러리를 사용하여 api를 호출하였기에 axios의 규칙에 따라야만 했다.
+
+```typescript
+function fetchCovidSummary(): Promise<AxiosResponse<CovidSummaryResponse>> {
+  const url = "https://api.covid19api.com/summary";
+  return axios.get(url);
+}
+```
+
+- axios 호출 결과를 반환하는 함수의 경우 AxiosResponse를 제네릭으로 한 Promise를 반환한다고 선언해야했고, AxiosResponse 또한 실제 결과를 분석한 타입을 제네릭으로 해야 했다.
+
+```typescript
+export interface CovidSummaryResponse {
+  Countries: Country[];
+  Date: string;
+  Global: Global;
+  Message: string;
+}
+```
+
+- axios의 호출 결과를 실제 네트워크 패널을 통해 분석하고 응답 결과에 맞게 interface를 정의하였다.
+- 정의한 CovidSummaryResponse를 모듈화하고, 이를 import 해서 사용했다.
+- 만약 응답 결과가 배열 형태라면 interface에 배열은 담을 수 없으므로 type에 interface를 배열로 한 것을 타입으로 정의해야 했다.
+
+```typescript
+function setTotalConfirmedNumber(data: CovidSummaryResponse) {
+  confirmedTotal.innerText = data.Countries.reduce(
+    (total: number, current: Country) => (total += current.TotalConfirmed),
+    0
+  ).toString();
+}
+```
+
+- api 호출 결과의 data를 빼내서 다른 함수를 호출하면 타입 추론을 통해 쉽게 파라미터의 타입을 정할 수 있었다.
+- 또한 미리 선언해둔 인터페이스의 속성을 자동 완성 기능으로 쉽게 접근하고, 콜백 함수의 인자 타입 역시 쉽게 추론해서 사용이 가능했다.
+
+### null 타입 오류 해결
+
+```typescript
+function initEvents() {
+  if (!rankList) return;
+  rankList.addEventListener("click", handleListClick);
+}
+
+async function handleListClick(event: Event) {
+  // ...
+}
+```
+
+- `if (!rankList) return;` 코드가 없다면 rankList가 null일 수도 있기 때문에 오류가 발생한다.
+- 가장 기본적인 방법은 위와 같이 타입 가드를 이용하여 null을 체크해주는 것이다.
+- 또한 이벤트리스너의 타입의 기본 스펙은 Event로 구현하는 것이므로 MouseEvent에서 Event로 바꾸었다.
+- 변수에 할당되는 코드에서 null 타입 오류가 발생한다면 삼항 연산자로 변경하여 코드의 가독성을 높이는 방법을 고려해 볼 수 있다.
+
+```typescript
+deathsList!.appendChild(li);
+```
+
+- if 문으로 리턴하는 방법 말고 `!` 연산자를 사용하여 타입 단언을 할 수 있다.
+- eslint에서 `non-null` 경고 표시를 발생시킨다. 이는 null이 아니라고 타입 단언하는 것이 위험할 수 있음을 경고하는 것이다.
+- 타입 단언의 경우 개발자가 임의로 타입을 결정하는 것이기에 의도치 않은 오류가 발생할 수 있으므로 주의해서 사용해야 한다.
+  - 예를 들어, 타입 단언으로 변수를 선언하면 인터페이스에 정의한 속성이 존재하지 않아도 초기화가 가능하다.
+
+```typescript
+deathsList?.appendChild(li);
+```
+
+- 위와 같이 옵셔널 체이닝 연산자를 사용하여 deathsList가 null이나 undefined가 아닌 경우에만 메서드를 실행시킬 수 있다.
+- 가독성도 좋고 타입 단언을 사용하지 않아도 되므로 사용 가능한 코드 라인에서는 잘 사용하면 유용할 것이라는 생각이 들었다.
+
+### DOM 유틸 함수
+
+```typescript
+function $<T extends HTMLElement>(selector: string) {
+  const element = document.querySelector(selector);
+  return element as T;
+}
+
+const confirmedTotal = $<HTMLSpanElement>(".confirmed-total");
+```
+
+- 기존에 `document.querySelector()`만 사용했던 `$` 유틸 함수를 제네릭을 활용하여 타입을 결정하도록 구현했다.
+- 변수 선언 시마다 타입 단언을 사용하지 않아도 되는 코드로 바꾸어 가독성을 높였다.
+
+> **reference**  
+> [타입스크립트 공식 문서](https://www.typescriptlang.org/ko/)  
+> [타입스크립트 핸드북](https://joshua1988.github.io/ts/)  
+> [실전 프로젝트로 배우는 타입스크립트](https://www.inflearn.com/course/%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EC%8B%A4%EC%A0%84/dashboard)
