--- a/_posts/2022-02-21-0221-0227.md
+++ b/_posts/2022-02-21-0221-0227.md
@@ -307,3 +307,155 @@ const d: C = { foo: "object literal" }; // 정상
 - 클래스에서도 구조적 타이핑이 사용되는데, d는 string 타입의 foo 속성을 가지고 생성자(Object.prototype으로 비롯된)를 가지기에 타입이 호환된다.
 - 만약 C의 생성자에 단순 할당이 아닌 연산 로직이 존재한다면, d의 경우는 생성자를 실행하지 않으므로 문제가 발생하게 된다.
 - 구조적 타이핑을 사용하면 유닛 테스트를 손쉽게 할 수 있다.
+
+<br />
+<br />
+<br />
+
+## 0222
+
+# any 타입 지양하기
+
+타입스크립트의 타입 시스템은 코드에 타입을 조금씩 추가할 수 있기 때문에 점진적이며, 언제든지 타입 체커를 해제할 수 있기 때문에 선택적이다.
+
+일부 특별한 경우를 제외하고는 any를 사용하면 타입 스크립트의 수많은 장점을 누릴 수 없게 된다.
+
+## any 타입의 위험성
+
+1. any 타입에는 타입 안전성이 없다.
+2. any는 함수 시그니처를 무시해 버린다.
+3. any 타입에는 언어 서비스가 적용되지 않는다.
+4. 코드 리팩터링 때 버그를 감춘다.
+5. 타입 설계를 감춘다.
+6. 타입시스템의 신뢰도를 떨어트린다.
+
+# 편집기를 사용한 타입 시스템 탐색
+
+타입스크립트를 설치하면, 두 가지를 실행할 수 있다.
+
+1. 타입스크립트 컴파일러
+2. 단독으로 실행할 수 있는 타입스크립트 서버
+
+여기서 타입스크립트 서버는 언어 서비스를 제공한다.  
+언어 서비스에서는 자동 완성, 명세 검사, 검색, 리팩터링 등의 기능을 제공한다.  
+그리고 편집기는 타입스크립트가 언제 타입 추론을 수행할 수 있는지에 대한 개념을 잡게 해 준다.  
+추론 정보는 디버깅하는 데에 큰 도움을 준다.
+
+# 리액트 특징 및 사용
+
+## 리액트 프로그래밍 특징
+
+1. 선언형 프로그래밍
+2. 컴포넌트 시스템
+3. 멀티 플랫폼 지원
+
+### 선언형 vs 명령형
+
+명령형 프로그래밍은 무언가 어떻게 해야하는지 설명한다면,  
+선언형 프로그래밍은 원하는 것이 무엇인지를 기술한다.
+
+## 리액트 시작하기
+
+### 공식 문서
+
+[베타 버전 공식 문서](https://beta.reactjs.org/learn)
+
+- react hooks를 사용해 작성
+- 인터랙션 실습 예제 및 이해하기 쉬운 다이어그램 제공
+- 이해 확인을 위한 과제 및 해결 방법 제공
+
+### 시작하기
+
+React는 프레임워크가 아니라, UI 빌딩 라이브러리  
+구축할 애플리케이션의 일부분 또는 제작 전체에 React를 점진적으로 반영할 수 있다.
+
+### 리액트 툴체인
+
+SPA를 구축하기 용이하게 React를 사용할 수 있다.
+`npm create-react-app react-app`  
+`npm init vite react-app`
+
+# 가상 돔
+
+## ReactDOM.render
+
+가상 DOM Tree을 실제 DOM에 마운트하여 렌더링한다.
+
+```javascript
+// vNode -> 가상 DOM Tree (React 요소로 구성)
+// domNode -> 실제 DOM 노드
+ReactDOM.render(vNode, domNode);
+```
+
+## Virtual DOM
+
+실제 DOM에 직접 조작하는 것이 아니라, 변경 요청이 발생할 때 가상 돔의 이전/이후 구조를 비교해 변경 된 부분만 실제 DOM에 업데이트한다.
+
+- 잦은 돔 조작은 비용이 많이 들고 속도가 느려진다.
+- 리액트는 가상 돔을 사용하여 성능을 향상시키는 방식을 채택했다.
+- 가상 돔의 컴포넌트를 지속적으로 관찰하여 상태 변경을 감지하려 시도했다.
+- 가상 돔의 이전, 이후 비교는 재조정 알고리즘을 사용하여 효율적으로 처리한다.
+- 비교 결과 차이가 발생하면 실제 돔에 반영해 UI를 업데이트 한다.
+
+## 재조정 (Reconciliation)
+
+리액트는 선언적 API를 제공하기 때문에 갱신이 될 때마다 매번 무엇이 바뀌었는지를 걱정할 필요가 없다.  
+이는 애플리케이션 작성을 쉽게 만들어주지만, 리액트 내부에서 어떤 일이 일어나고 있는지 명확히 눈에 보이지 않는다.  
+리액트에서는 비교(diffing) 알고리즘을 통해 컴포넌트의 갱신이 예측 가능해지면서도 고성능 앱이라고 불러도 손색없을 만큼 충분히 빠른 앱을 만들 수 있다.
+
+하나의 트리를 가지고 다른 트리를 변환하기 위한 최소한의 연산 수를 구하는 알고리즘 문제를 풀기 위해서는 최첨단 알고리즘도 O(n3)의 복잡도를 가진다.  
+리액트는 두 가지 가정을 기반하여 O(n) 복잡도의 휴리스틱 알고리즘을 구현했다.
+
+1. 서로 다른 타입의 두 엘리먼트는 서로 다른 트리를 만들어낸다.
+2. 개발자가 key prop을 통해, 여러 렌더링 사이에서 어떤 자식 엘리먼트가 변경되지 않아야 할지 표시해 줄 수 있다.
+
+### 엘리먼트의 타입이 다른 경우
+
+두 개의 트리를 비교할 때, 리액트는 두 엘리먼트의 루트 엘리먼트부터 비교한다.
+
+두 루트 엘리먼트의 타입이 다르면, 리액트는 이전 트리를 버리고 완전히 새로운 트리를 구축한다. 트리를 버릴 때 이전 돔 노드들은 파괴되고, 컴포넌트 인스턴스는 componentWillUnmount()가 실행된다. 이전 트리와 연관된 모든 state는 사라진다.
+
+### 엘리먼트의 타입이 같은 경우
+
+같은 타입의 두 리액트 돔 엘리먼트를 비교할 때, 리액트는 두 엘리먼트의 속성을 확인하여, 동일한 내역은 유지하고 변경된 속성들만 갱신한다.  
+돔 노드의 처리가 끝나면 리액트는 이어서 해당 노드의 자식들을 재귀적으로 처리한다.
+
+### 자식에 대한 재귀적 처리
+
+돔 노드의 자식들을 재귀적으로 처리할 때, 리액트는 기본적으로 동시에 두 리스트를 순회하고 차이점이 있으면 변경을 생성한다.
+
+```html
+<ul>
+  <li>first</li>
+  <li>second</li>
+</ul>
+
+<ul>
+  <li>first</li>
+  <li>second</li>
+  <li>third</li>
+</ul>
+```
+
+이와 같이 자식의 끝에 엘리먼트를 추가하면 두 트리 사이의 변경은 잘 작동할 것이다.  
+하지만 리스트의 맨 앞에 엘리먼트를 추가하는 경우 성능은 좋지 않다.  
+변경이 없는 자식들까지 모두 변경해야하므로 비효율적이다.
+
+이러한 문제를 해결하기 위해, 리액트에서는 key 속성을 지원한다.  
+자식들이 key를 가지고 있다면, 리액트는 key를 통해 기존 트리와 이후 트리의 자식들이 일치하는지 확인한다. key로 사용할 값은 일반적으로 식별자 데이터를 그대로 사용하면 된다.
+
+최후의 수단으로 배열의 인덱스를 key로 사용할 수 있다. 다만 배열이 재배열되면 컴포넌트의 state와 관련된 문제가 발생할 수 있다. 컴포넌트 인스턴스는 key를 기반으로 갱신되고 재사용된다. 인덱스를 key로 사용하면 항목의 순서가 바뀌었을 때 key 또한 바뀔 것이다. 그 결과로, 컴포넌트의 state가 엉망이 되거나 의도하지 않은 방식으로 바뀔 수도 있다.
+
+### 고려 사항
+
+리액트는 휴리스틱에 의존하고 있기 때문에, 휴리스틱이 기반하고 있는 가정에 부합하지 않는 경우 성능이 나빠질 수 있다.
+
+1. 알고리즘은 다른 컴포넌트 타입이 갖는 종속 트리들의 일치 여부를 확인하지 않는다. 매우 비슷한 결과물을 출력하는 두 컴포넌트를 교체하고 있다면, 둘을 같은 타입으로 만드는 것이 더 나을 수도 있다.
+2. key는 반드시 변하지 않고, 예상 가능하며, 유일해야 한다. 변하는 key를 사용하면 많은 컴포넌트 인스턴스와 돔 노드를 불필요하게 재생성하여 성능이 나빠지거나 자식 컴포넌트의 state가 유실될 수 있다.
+
+## React Fiber
+
+리액트 16 이전의 비교 알고리즘은 애니메이션을 구현할 때 퍼포먼스 이슈가 존재했다.  
+원래 기존의 리액트 reconciliation은 재귀적으로 동작하기 때문에 중간에 멈출 수가 없었다. 그래서 이 작업이 오래 걸린다면 16ms 내에 프레임을 찍어내지 못해서 화면이 끊기는 현상이 발생했다.
+
+Fiber는 비동기 reconciliation으로 브라우저가 idle한 상태가 되었을 때 잘게 나눠진 렌더링 작업을 조금씩 실행하는 구조이다. 이전에 애니메이션이 끊기는 이유는 싱글스레드인 자바스크립트 엔진이 reconciliation을 수행하기 때문에 애니메이션을 실행시키지 못했기 때문이다. Fiber는 렌더링을 잘게 나누어 조금씩이지만 렌더링을 꾸준히 하기 때문에 16ms마다 프레임이 잘 찍힐 수 있도록 하여 화면이 끊기지 않는다.
