--- a/_posts/2022-02-21-0221-0227.md
+++ b/_posts/2022-02-21-0221-0227.md
@@ -459,3 +459,238 @@ ReactDOM.render(vNode, domNode);
 원래 기존의 리액트 reconciliation은 재귀적으로 동작하기 때문에 중간에 멈출 수가 없었다. 그래서 이 작업이 오래 걸린다면 16ms 내에 프레임을 찍어내지 못해서 화면이 끊기는 현상이 발생했다.
 
 Fiber는 비동기 reconciliation으로 브라우저가 idle한 상태가 되었을 때 잘게 나눠진 렌더링 작업을 조금씩 실행하는 구조이다. 이전에 애니메이션이 끊기는 이유는 싱글스레드인 자바스크립트 엔진이 reconciliation을 수행하기 때문에 애니메이션을 실행시키지 못했기 때문이다. Fiber는 렌더링을 잘게 나누어 조금씩이지만 렌더링을 꾸준히 하기 때문에 16ms마다 프레임이 잘 찍힐 수 있도록 하여 화면이 끊기지 않는다.
+
+<br />
+<br />
+<br />
+
+## 0223
+
+# 편집기를 사용한 타입 시스템 탐색
+
+타입스크립트를 설치하면, 두 가지를 실행할 수 있다.
+
+1. 타입스크립트 컴파일러
+2. 단독으로 실행할 수 있는 타입스크립트 서버
+
+여기서 타입스크립트 서버는 언어 서비스를 제공한다.  
+언어 서비스에서는 자동 완성, 명세 검사, 검색, 리팩터링 등의 기능을 제공한다.  
+그리고 편집기는 타입스크립트가 언제 타입 추론을 수행할 수 있는지에 대한 개념을 잡게 해 준다.  
+추론 정보는 디버깅하는 데에 큰 도움을 준다.
+
+# 타입이 값들의 집합이라고 생각하기
+
+타입스크립트가 오류를 체크하는 순간에는 타입을 가지고 있다.  
+타입은 '할당 가능한 값들의 집합'이라고 말할 수 있다.  
+예를 들어, 42와 36.5는 number 타입에 해당되고, 'hi'는 그렇지 않다.
+
+```typescript
+interface Person {
+  name: string;
+}
+
+interface Lifespan {
+  birth: Date;
+  death?: Date;
+}
+
+type PersonSpan = Person & Lifespan;
+```
+
+- & 연산자는 두 타입의 인터섹션(교집합)을 계산한다.
+- 언뜻 보기에는 공통 속성이 없기 때문에, PersonSpan 타입을 공집합으로 예상하기 쉽다.
+- 그러나 타입 연산자는 인터페이스의 속성이 아닌, 값의 집합에 적용된다.
+- 그리고 추가적인 속성을 가지는 값도 그 타입에 속하기에 Person과 Lifespan의 속성을 모두 구현한 값은 인터섹션 타입에 속한다.
+
+조금 더 일반적으로 PersonSpan 타입을 선언하는 방법은 extends 키워드를 쓰는 것이다.
+
+```typescript
+interface Person {
+  name: string;
+}
+
+interface PersonSpan extends Person {
+  birth: Date;
+  death?: Date;
+}
+```
+
+- 타입이 집합이라는 관점에서 extends의 의미는 '...에 할당 가능한'과 비슷하게, '...의 부분집합'이라는 의미로 받아들일 수 있다.
+- extends 키워드는 제네릭 타입에서 한정자로도 쓰이며, 이 문맥에서는 '...의 부분집합'을 의미하기도 한다.
+
+## 타입스크립트 용어와 집합 이론 용어 사이 대응 관계
+
+- never -> 공집합
+- 리터럴 타입 -> 원소가 1개인 집합
+- 값이 T에 할당 가능 -> 값이 T의 원소
+- T1이 T2에 할당 가능 -> T1이 T2의 부분 집합
+- T1이 T2를 상속 -> T1이 T2의 부분 집합
+- `T1 | T2` -> T1과 T2의 합집합
+- `T1 & T2` -> T1과 T2의 교집합
+- unknown -> 전체 집합
+
+### 추가
+
+- 타입스크립트 타입이 되지 못하는 값의 집합들도 존재한다.
+- 정수에 대한 타입, 또는 x와 y 속성 외에 다른 속성이 없는 객체는 타입스크립트 타입에 존재하지 않는다.
+- 'A는 B를 상속', 'A는 B에 할당 가능', 'A는 B의 서브 타입'은 'A는 B의 부분 집합'과 같은 의미이다.
+
+# 타입 공간과 값 공간의 심벌 구분
+
+타입스크립트의 심벌은 타입 공간이나 값 공간 중 한 곳에 존재  
+심벌 이름이 같더라도 속하는 공간에 따라 다른 것을 나타낼 수 있다.
+
+```typescript
+interface Cylinder {
+  radius: number;
+  height: number;
+}
+
+const Cylinder = (radius: number, height: number) => ({ radius, height }); // 정상
+```
+
+- interface Cylinder에서 Cylinder는 타입으로 쓰인다.
+- const Cylinder에서 이름은 같지만 값으로 쓰이며, 서로 아무런 관련도 없다.
+- 이런 점이 가끔 오류를 야기한다. 다만 어떤 형태로 쓰이는지 문맥을 살펴 알아내야 하고 언뜻 봐서 알 수 없다.
+
+```typescript
+type T1 = "string literal";
+const v1 = "string literal";
+```
+
+- 일반적으로 type이나 interface 다음에 나오는 심벌은 타입인 반면, const나 let 선언에 쓰이는 것은 값이다.
+- 컴파일 과정에서 타입 정보는 제거되기 때문에, 심벌이 사라진다면 그것은 타입에 해당될 것이다.
+
+## 상황에 따라 타입과 값 두 가지 모두 가능한 경우
+
+### class
+
+클래스가 타입으로 쓰일 때는 형태(속성, 메서드)가 사용되는 반면, 값으로 쓰일 때는 생성자가 사용된다.
+
+### typeof
+
+```typescript
+const p: Person = { ... };
+type T1 = typeof p; // 타입은 Person
+const v1 = typeof p; // 값은 'object'
+```
+
+- 타입의 관점에서, typeof는 값을 읽어서 타입스크립트 타입을 반환한다.
+- 값의 관점에서 typeof는 자바스크립트 런타임의 typeof 연산자가 된다.
+
+## 속성 접근자가 타입으로 쓰일 경우
+
+- 속성 접근자인 []는 타입으로 쓰일 때에도 동일하게 동작한다.
+- 그러나 대괄호 접근자와 마침표 접근자는 값이 동일하더라도 타입은 다를 수 있다.
+- 따라서 타입의 속성을 얻을 때에는 반드시 대괄호 접근자를 사용해야 한다.
+
+```typescript
+const first: Person["first"] = p["first"]; // 값으로는 p.first도 가능
+```
+
+- `Person['first']`는 타입 맥락에 쓰였기 때문에 타입이다.
+- 인덱스 위치에는 유니온 타입과 기본형 타입을 포함한 어떠한 타입이든 사용 가능하다.
+
+```typescript
+type PersonEl = Person["first" | "last"];
+```
+
+## 두 공간 사이에서 다른 의미를 가지는 코드 패턴
+
+- 값으로 쓰이는 this는 자바스크립트의 this 키워드이다. 타입으로 쓰이는 this는, 일명 다형성 this라고 불리는 this의 타입스크립트 타입이다. 서브클래스의 메서드 체인을 구현할 때 유용하다.
+- 값에서 `&`와 `|`는 비트 연산이다. 타입에서는 인터섹션과 유니온이다.
+- const는 새 변수를 선언하지만, as const는 리터럴 또는 표현식의 추론된 타입을 바꾼다.
+- extends는 서브클래스 또는 서브타입 또는 제너릭 타입의 한정자를 정의할 수 있다.
+- in은 루프 또는 매핑된(mapped) 타입에 등장한다.
+
+## 타입스크립트에서 구조 분해 할당
+
+타입스크립트에서 구조 분해 할당을 하면 이상한 오류가 발생한다.
+
+```typescript
+function Email({ person: Person, subject: string, body: string });
+// 'Person'에 암시적으로 'any' 형식이 있습니다.
+// 'string' 식별자가 중복되었습니다.
+// 'string'에 암시적으로 'any' 형식이 있습니다.
+```
+
+- 값의 관점에서 Person과 string이 해석되었기 때문에, 즉 구조 분해 할당 시 별칭 값으로 해석하여 오류가 발생한다.
+- 문제를 해결하려면 타입과 값을 구분해야 한다.
+
+```typescript
+function email({
+  person,
+  subject,
+  body,
+}: {
+  person: Person;
+  subject: string;
+  body: string;
+}) {
+  // ...
+}
+```
+
+- 이 코드는 장황하지만 매개변수에 명명된 타입을 사용하거나 문맥에서 추론되도록 잘 동작한다.
+
+# 타입 단언보다는 타입 선언 사용하기
+
+타입 스크립트에서 변수에 값을 할당하고 타입을 부여하는 방법은 두 가지, 타입 선언과 타입 단언이다.  
+타입 단언보다 타입 선언을 사용하는 것이 좋다.
+
+그 이유는,
+
+- 타입 선언은 할당되는 값이 해당 인터페이스를 만족하는지 검사한다.
+- 반면 타입 단언은 강제로 타입을 지정했으니 타입 체커에게 오류를 무시하라고 하는 것과 같다.
+- 타입 단언이 꼭 필요한 경우가 아니라면, 안정성 체크도 되는 타입 선언을 사용하는 것이 좋다.
+
+## 화살표 함수에서의 타입선언
+
+map API 결과로 Person[] 타입을 반환받고 싶다고 가정해보자
+
+```typescript
+interface Person {
+  name: string;
+}
+
+const people = ["alice", "bob", "jan"].map((name) => ({ name }));
+```
+
+이와 같이 코드를 작성하면 타입 추론은 `{ name: string; }[]`로 된다.
+
+이때 타입 단언을 사용하면 타입 체크를 제대로 하지 못해 의도치 않은 오류가 런타임에 발생할 수 있다.
+
+```typescript
+interface Person {
+  name: string;
+}
+
+const people: Person[] = ["alice", "bob", "jan"].map(
+  (name): Person => ({ name })
+);
+```
+
+이와 같이 코드를 작성하면 의도한 대로 Person[] 타입을 추론하게 된다.  
+주의할 점은 `(name: Person)`이 아닌 `(name): Person`으로 작성해야 반환 타입이 Person이라고 명시하는 것이다.
+
+## 타입 단언을 사용해야 하는 경우
+
+타입 단언은 타입 체커가 추론한 타입보다 개발자가 판단하는 타입이 더 정확할 때 의미가 있다.  
+ex) DOM 엘리먼트 타입 선언 시
+
+- 타입스크립트는 DOM에 접근할 수 없기 때문에 해당 태그가 어떤 엘리먼트인지 알지 못한다.
+- 자주 쓰이는 문법 `!`를 사용하여 null이 아님을 단언할 수도 있다.
+- 타입 단언문으로 임의의 타입 간에 변환을 할 수는 없다. A가 B의 부분 집합인 경우에 타입 단언문을 사용해 변환할 수 있다.
+- 이를 강제로 실행하려면 unknown을 사용해야 한다. 이는 타입 간 변환을 가능케 하지만 위험한 동작을 발생시킬 수 있다.
+
+```typescript
+const el = document.getElementById("foo")!; // 타입은 HTMLElement
+const el = document.body as unknown as Person;
+```
+
+# 객체 래퍼 타입 피하기
+
+- 타입스크립트는 기본형과 객체 래퍼 타입을 별도로 모델링한다.
+- 타입스크립트 객체 래퍼 타입은 지양하고, 대신 기본형 타입을 사용해야 한다.
+  - string을 매개변수로 받는 메서드에 String 래퍼 객체를 전달하는 순간 문제가 발생한다.
+  - string은 String에 할당할 수 있지만 String은 string에 할당할 수 없다.
